get rid of carriage returns

--- a/groups/gtAmalgam.tex
+++ b/groups/gtAmalgam.tex
@@ -11,8 +11,8 @@ $H<G$ is a $p$-local subgroup of $G$ if $M= N_G(P), P \in p(G)$.
 {\bf Theorem 1:}
 Let $N \lhd G$, be abelian.  If $G/N$ is perfect then $G'$ is perfect.
 \begin{quote}
-\emph{Proof:}  
-$(G/N)= (G/N)'$ so $G= G'N$ and 
+\emph{Proof:}
+$(G/N)= (G/N)'$ so $G= G'N$ and
 $G/N \approx G'/(G' \cap N)$.  So
 $G'/(G' \cap N)=
 (G'/(G' \cap N))'$ and thus $G=G''N$ so $G/G'' \approx N/(G'' \cap N)$.  Since this is abelian,
@@ -21,7 +21,7 @@ $G' \subseteq G''$.
 {\bf Theorem 2:}
 $C_M(O_p(M)) \subseteq O_p(M)$ is equivalent to $F^*(M)=O_p(M)$ and $O_{p'}(M)=1$.
 \begin{quote}
-\emph{Proof:}  
+\emph{Proof:}
 Clear.
 \end{quote}
 {\bf Theorem 3:}
@@ -37,25 +37,25 @@ $G$.
 $L= (L \cap F(G))(L \cap E(G))$; (b) $F^*(L) = F^*(G) \cap L$; (c)
 $E(L) C_{E(G)}(L) = E(G)$.  $E(L) \lhd E(G)$.
 \begin{quote}
-\emph{Proof:}  
+\emph{Proof:}
 Every component of $L$ is a component of $G$ and $F(L) \leq F(G)$.  Since $[F(G), E(G)]=1$.
 \end{quote}
 {\bf Theorem 5:}  The action of $G$ by right conjugation on cosets of primitive groups is primitive.
 \begin{quote}
-\emph{Proof:}  The action is obviously transitive and 
+\emph{Proof:}  The action is obviously transitive and
 $Mg=M \rightarrow g \in M$ which is maximal so the action is primitive.
 \end{quote}
 {\bf Theorem 6:}
 If $M<G$ is primitive, $N \lhd G$ and $M \cap N \neq 1$ then $C_G(N) =1$.
 \begin{quote}
-\emph{Proof:}  
+\emph{Proof:}
 $C_G(N) \lhd G$ and $C_G(N) < M \cap N$ then $C_G(N)=1$.
 \end{quote}
 {\bf Theorem 7:}
 Let $M$ be a primitive subgroup of $G$.  No non-trivial subnormal subgroup of $G$ is contained in $M$.
 $F(G) \cap M = 1$.
 \begin{quote}
-\emph{Proof:}  
+\emph{Proof:}
 Suppose $L \lhd \lhd G, 1 \neq L \leq M$.  Pick a minimal one, $L \leq F^*(G)$.  By the previous result,
 ${\mathbb Z}(F^*(G)) = 1$.  So $F(G)=1$ and $L$ is a component of $G$.
 $\langle L^M \rangle \lhd E(G)$ and by primitivity, $E(G) \leq M$.  So $E(G)=1$, which is a contradiction.
@@ -65,7 +65,7 @@ If $M<G$ is a primitive subgroup, $p \in \pi(M)$, $N \lhd G$.  Suppose $M \cap N
 (a) $p \notin \pi(N)$, (b) $\forall q \in \pi(N), \exists$ an $M$-invariant subgroup Sylow $q$-subgroup
 of $N$; (c) if $|\pi(N)| \geq 2$ then $M$ is a maximal subgroup of $G$.
 \begin{quote}
-\emph{Proof:}  
+\emph{Proof:}
 (a) Put $P= O_p(M)$ then $M= N_G(P)$ and $P \in S_p(NP)$ since $N \cap P = 1$ thus $p \notin \pi(N)$.
 For (b), $PN$ acts on $\Omega= S_q(N)$. by conjugation and $N$ is a transitive normal subgroup of $PN$ so
 $C_{\Omega}(P) \neq \emptyset$ and $C_N(P)$ is transitive on $C_{\Omega}(P)$.  Now $C_N(P) \leq M \cap N =1$ gives
@@ -76,7 +76,7 @@ For (c), $\exists M$-invariant $Q \in S_q(N)$.  Since $Q < N$, $M < QM < NM \leq
 Let $M<G$ be a primitive subgroup, $N \lhd G$: $M \cap F^*(N) \neq 1$ then
 $F(G)=1$, $F^*(N)=F^*(G)= E(G)$. Every minimal normal subgroup of $G$ is contained in $M$.
 \begin{quote}
-\emph{Proof:}  
+\emph{Proof:}
 $F^*(N) \leq F^*(G)$ and by a previous result, ${\mathbb Z}(R(G)) =1$ and so $F(G)=1$.$F^*(N)=E(N)$ and
 $F^*(G)= C_{F^*(G)}(E(N))E(N)$.  Applying the result again,
 $F^*(G)= E(N)= F^*(N)$.
@@ -87,14 +87,14 @@ Suppose $G$ contains a primitive maximal subgroup $M$ then one of the following 
 (F2) $G$ contains exactly two minimal normal subgroups $N_1, N_2$ which are non-abelian
 $F^*(G)= N_1 \times N_2= E(G)$; (F3) $F^*(G)$ is a minimal non-abelian subgroup of $G$.
 \begin{quote}
-\emph{Proof:}  
+\emph{Proof:}
 See Stellmacher, 6.6.4.
 \end{quote}
 {\bf Theorem 11:}
 If F1 holds and $p \in \pi(M), O_p(M) \neq 1$ then all primitive maximal subgroups of $G$ are
 conjugate.
 \begin{quote}
-\emph{Proof:}  
+\emph{Proof:}
 Put $P= O_p(M), F= F^*(G)$ then $M= N_G(P)$, $FP \lhd G$ and $S_p(M) \subseteq S_p(G)$.  Let
 $H$ be another primitive maximal subgroup.  $H$ is also a complement of $F$ so $|H|=|M|$.
 $\exists g: P \leq P^g$.  $P= H^g \cap FP \lhd H^g$ so $H^g= N_G(P)= M$.
@@ -103,8 +103,8 @@ $\exists g: P \leq P^g$.  $P= H^g \cap FP \lhd H^g$ so $H^g= N_G(P)= M$.
 Suppose F2 holds.   There is an $M$-isomorphism $\alpha: N_1 \rightarrow N_2$ such that
 $M \cap F^*G) = \{ x x^{\alpha}: x \in N_1 \}$.
 \begin{quote}
-\emph{Proof:}  
-Let $D= M \cap F^*(G)$ then by a previous result ($C_G(N)=1$), $ D \cap N_1 = 1 = D \cap N_2$. 
+\emph{Proof:}
+Let $D= M \cap F^*(G)$ then by a previous result ($C_G(N)=1$), $ D \cap N_1 = 1 = D \cap N_2$.
 Since $G= N_iM$, $F^*(G)= N_iD$ and $\forall x_1 \in N_1, \exists ! x_2 \in N_2: x_1 x_2 \in D$.
 The mapping $\alpha: N_1 \rightarrow N_2, x_1 \mapsto x_2$ is an isomorphism.  The isomorphism
 commutes with  elements of $M$ since $N_1, N_2, D$ are all $M$-invariant.
@@ -113,7 +113,7 @@ commutes with  elements of $M$ since $N_1, N_2, D$ are all $M$-invariant.
 Let $F$ be a minimal normal subgroup of $G$, $N<G$, $G= FM$.
 (a) Suppose $U \subseteq F$ and $U^M=U$, then $UM<G$.
 \begin{quote}
-\emph{Proof:}  
+\emph{Proof:}
 (b) follows from (a).  For (a), assume the contrary, $G=UM$.  Then $U \lhd G$ and $F$ is not a minimal
 normal subgroups of $G$.
 \end{quote}
@@ -129,7 +129,7 @@ Let $M$ be a group of characteristic $p$.
 Suppose $U \le M$ and $U \lhd \lhd M$ or $O_p(M) \le U$ then
 $U$ has characteristic $p$.
 \begin{quote}
-\emph{Proof:}  
+\emph{Proof:}
 The case $O_p(M) \leq $ is clear.  In the other case, apply $F^*(L) =F^*(G) \cap L$.
 \end{quote}
 {\bf Definition 3:}  $M_1, M_2$ is called a \emph{primitive pair} if $1 \ne A \lhd M_i$,
@@ -140,11 +140,9 @@ $1 \neq A \lhd M_i$, $A \leq M_1 \cap M_2$.
 \\
 {\bf Theorem 15:}
 Let $M_1, M_2$ be two different maximal $p$-local subgroups of $G$ that both have characteristic $p$.
-Suppose $M_1$ and $M_2$ have a common Sylow $p$-subgroup, then $(M_1 , M_2)$ is a primitive pair of 
-characteristic $p$.
+Suppose $M_1$ and $M_2$ have a common Sylow $p$-subgroup, then $(M_1 , M_2)$ is a primitive pair of characteristic $p$.
 \begin{quote}
-\emph{Proof:}  
-Let $1 \neq A \lhd M_i, A \leq M_i \cap M_j, i \neq j$.  By previous result,
+\emph{Proof:}  Let $1 \neq A \lhd M_i, A \leq M_i \cap M_j, i \neq j$.  By previous result,
 $1 \neq O_p(A) \lhd M_i$ and the maximality of $M_i$ gives $M_i= N_G(O_p(A))$.  So
 $N_{M_j}(A)= M_i \cap M_j$ has property ${\cal P}$.  Let $S$ be a common Sylow subgroup of
 $M_1$ and $M_2$ then $O_p(M_1 ) O_p(M_2 ) \leq S \leq M_1 \cap M_2$.
@@ -154,8 +152,7 @@ Suppose $p \in \pi(G)$, every $p$-local has characteristic $p$ and $O_p(G)=1$ th
 (a) there is a primitive pair of characteristic $p$ or (b)
 every maximal $p$-local subgroup of $G$ is strongly embedded in $G$.
 \begin{quote}
-\emph{Proof:}  
-Let $M$ be a maximal $p$-local of $G$, then $O_p(M) \neq 1$ and
+\emph{Proof:}  Let $M$ be a maximal $p$-local of $G$, then $O_p(M) \neq 1$ and
 $N_G(M) \leq N_G(O_p(M))=M < G$ so $M^g \neq M, g \in G-M$.  $M^g$ is a maximal $p$-local.
 Among all such, choose one, $L \neq M$ with $|M \cap L|_p$ maximal.
 If $|M \cap L|_p>1$ then $T \in S_p(M \cap L)$ and $U= N_G(T)$.
@@ -167,28 +164,23 @@ holds if $|M \cap L|_p = 1$ when $M, L$ are two different $p$-locals.   If $|M \
 $M$ is strongly $p$-embedded.
 \end{quote}
 {\bf Bender's Little Theorem:}
-Let $(M_1, M_2)$ be a primitive pair of $G$.  Suppose 
-$F^*(M_1) \le M_2$ and
+Let $(M_1, M_2)$ be a primitive pair of $G$.  Suppose $F^*(M_1) \le M_2$ and
 $F^*(M_2) \le M_1$ then $\exists p: (M_1, M_2)$ has characteristic $p$.
 \begin{quote}
-\emph{Proof:}  
-See Stellmacher, 10.1.4.
+\emph{Proof:}  See Stellmacher, 10.1.4.
 \end{quote}
 {\bf Theorem 17:}
 Let $(M_1, M_2)$ be a primitive pair of $G$ of characteristic $p$ then $\exists i \in \{1 , 2 \}$
-such that either 
-(1) The action of $M_i$ on $O_p(M_i/ \Phi(M_i))$ is not $p$-solvable or
+such that either (1) The action of $M_i$ on $O_p(M_i/ \Phi(M_i))$ is not $p$-solvable or
 (2) $W_i$ is elementary abelian and the action of $M_i$ on $W_i$ is not $p$-stable.
 \begin{quote}
-\emph{Proof:}  
-See Stellmacher, 10.1.5.
+\emph{Proof:}  See Stellmacher, 10.1.5.
 \end{quote}
 {\bf Theorem 18:}
 Let $(M_1, M_2)$ be a primitive pair of characteristic $p$, then $M_1$ or
 $M_2$ has a non-abelian Sylow $2$-subgroup.
 \begin{quote}
-\emph{Proof:}  
-If $p \neq 2$, it follows from the previous result and $p$-stability for groups with abelian $2$-syslow subgroups.
+\emph{Proof:}  If $p \neq 2$, it follows from the previous result and $p$-stability for groups with abelian $2$-syslow subgroups.
 For $p= 2$, if the Sylow $2$-groups are abelian, then $O_2(M_1)= O_2(M_2)$ and $(M_1, M_2)$ is not primitive.
 \end{quote}
 {\bf Theorem 19:}
@@ -197,8 +189,7 @@ $Phi(A) \leq O_p(M)$ and $A \nleq O_p(M)$ then $\exists x \in O_{p,p'}(M)$
 such that for $L= \langle A, A^x \rangle$, (a) $x \in O^p(L) \leq O_{p,p'}(M)$,
 (b) $[O^P(L),A]= O^p(L)$, and (c) $|A/(A \cap O_p(L))|=p$ and $[A \cap O_p(L), L] \leq O_p(M)$.
 \begin{quote}
-\emph{Proof:}  
-$\exists L$ with property (a).  Choose $L$ maximal among all such groups then (b) follows.
+\emph{Proof:}  $\exists L$ with property (a).  Choose $L$ maximal among all such groups then (b) follows.
 ${\overline L}= L/O_p(L)$, ${\overline Q}= O_{p'}({\overline L})$ so ${\overline L} = {\overline {AQ}}$.
 $A$ is an elementary abelian $p$-group and
 $\Phi(A) \leq O_p(M) \cap L \leq O_p(L)$.  Let ${\cal B}$ be the set of maximal subgroups of $A$.
@@ -208,12 +199,10 @@ on ${\overline Q}$.  This implies $U= A \cap O_p(L)$ and
 $[U, O^p(L)] \leq O_p(L) \cap O_{pp'}(M) \leq O_p(M)$ and (c) follows.
 \end{quote}
 {\bf Theorem 20:}
-Let $M$ be a group of characteristic $2$ that 
-possesses a section isomorphic to $S_4$  then $M$
+Let $M$ be a group of characteristic $2$ that possesses a section isomorphic to $S_4$  then $M$
 possesses a section isomorphic to $S_4$ .
 \begin{quote}
-\emph{Proof:}  
-Let $M$ be a minimal counterexample.  $O_2(S_3)=1$ and $M/O_2(M) \leq N \lhd X < M$ and $X/N \approx S_3$.
+\emph{Proof:}  Let $M$ be a minimal counterexample.  $O_2(S_3)=1$ and $M/O_2(M) \leq N \lhd X < M$ and $X/N \approx S_3$.
 $X=M$ by minimality.  Let ${\overline M}= M/N$ and $D \in S_3(M)$, ${\overline D} \approx C_3 \lhd M$.
 By Frattini, $M= N_M(D) N$.  There are $2$-elements that act nontrivially on the $3$ group $D$.  Let $t \in N_M(D)$
 of minimal order.  $\exists d \in D: |d|=3, d^t= d^{-1}$, $\langle d, t \rangle/\langle t^2 \rangle \approx S_3$.
@@ -229,14 +218,12 @@ $q(Z,X)= min \thinspace \{e \in {\mathbb R}: |A/C_A(Z)|^e= |Z/C_Z(A)|, A \in {\c
 \\
 \\
 {\bf Theorem 21:}
-Let $M$ act faithfully on 
-an elementary abelian $2$-group, $V$ and let
+Let $M$ act faithfully on an elementary abelian $2$-group, $V$ and let
 $A$ be an elementary abelian $2$-subgroup of $M$.  Suppose
 $C_M(O_{2'}(M)) \leq O_{2'}(M)$ and $|V/C_V(A)| < |A|^2$.  Then
 $M$ posseses a section isomorphic to $S_3$.
 \begin{quote}
-\emph{Proof:}  
-Among all the elementary abelian $2$-subgroups that satisfy the condition, choose $A$ of minimal order.
+\emph{Proof:}  Among all the elementary abelian $2$-subgroups that satisfy the condition, choose $A$ of minimal order.
 Assume $|A|=2$, then $A \in {\cal A}_V(M)$ and the result follows from Glauberman's theorem.
 If $|A|>2$,$C_M(O_{2'}(M) \leq O_{2'}(M)$ means $A$ acts non-trivially on $O_{2'}(M)$.  Let $Q \subseteq O_{2'}(M)$
 be minimal.  $Q^A=Q$ and $[Q,A] \neq 1$ so $A_0= C_A(Q)$ is a maximal subgroup of $A$ and
@@ -249,35 +236,29 @@ Let $M$ be a group and $V$ an elementary abelian normal $p$-subgroup of $M$; let
 $V= \langle Z^M \rangle$ and $Z \lhd O_p(M)$.  Suppose $\exists A \leq O_p(M)$ with $[V,A,A]=1$.
 Then $|A/C_A(V)|^q \leq |V/C_V(A)|$ where $q= q(Z,O_p(M))$.
 \begin{quote}
-\emph{Proof:}  
-See Stellmacher, 10.1.10.
+\emph{Proof:}  See Stellmacher, 10.1.10.
 \end{quote}
 {\bf Theorem 23:}
 Let $(M_1, M_2)$ be a solvable primitive pair of characteristic $2$, then $M_1$ or
 $M_2$ has a section isomorphic to $S_4$.
 \begin{quote}
-\emph{Proof:}  
-See Stellmacher, 10.1.11.
+\emph{Proof:}  See Stellmacher, 10.1.11.
 \end{quote}
 {\bf Theorem 24:}
 Let $G$ be a group of even order, $O_2(G)=1$.  Suppose that for every $2$-local $M$ of $G$,
 (1) $M$ has characteristic $2$ and is solvable and (2) $M$ does not possess a section
 isomorphic to $S_4$ then every maximal $2$ local of $G$ is strongly $2$-embedded in $G$.
 \begin{quote}
-\emph{Proof:}  
-This is a direct consequence of the result preceeding Bender's theorem and the previous result.
+\emph{Proof:}  This is a direct consequence of the result preceeding Bender's theorem and the previous result.
 \end{quote}
 \section {Amalgam Graphs}
 {\bf Definition 4:}
 $P_1, P_2 \le G$, $|P_i|< \infty$.  Construct a graph $\Gamma(G, P_1, P_2)=\Gamma$
-as follows: 
-$\Gamma$ has verticies consisting of right cosets of $P_1$ and $P_2$; the verticies
+as follows: $\Gamma$ has verticies consisting of right cosets of $P_1$ and $P_2$; the verticies
 $P_i g_j$ and $P_n g_m$ are
-joined by an edge if 
-$P_i g_j \ne P_n g_m$ and
+joined by an edge if $P_i g_j \ne P_n g_m$ and
 $P_i g_j \cap P_n g_m \ne \emptyset$.  $\Delta(\alpha)$ denotes the verticies
-adjacent to $\alpha$.  $G$ acts on graph by right multiplication on cosets.  
-$\Delta(\alpha)$ is a set of vertices adjacent to $\alpha$.
+adjacent to $\alpha$.  $G$ acts on graph by right multiplication on cosets.  $\Delta(\alpha)$ is a set of vertices adjacent to $\alpha$.
 $G \rightarrow Aut(\Gamma)$.
 \\
 \\
@@ -289,8 +270,7 @@ $G$ is a $G$-conjugate of $P_1 \cap P_2$, (b) $G_{\alpha}$ acts transitively
 on $\Delta(\alpha)$, (c) $|\Delta(\alpha)|= |G_{\alpha}:G_{\alpha, \beta}|$,
 (d) $P_1 \cap P_2$ is the kernel of the action on $\Gamma$.
 \begin{quote}
-\emph{Proof:}  
-(a) For $P_ix \in \Gamma$ and $g \in G$, $P_ixg=P_ix$ is equivalent to
+\emph{Proof:}  (a) For $P_ix \in \Gamma$ and $g \in G$, $P_ixg=P_ix$ is equivalent to
 $P_i g^{x^{-1}} = P_i$ is equivalent $g \in P_i^x$.
 (b) Let $\langle P_1x, P_2y \rangle$ be an edge.  $\exists z \in P_1x \cap P_2y$.  Hence
 $P_1x = P_1z$ and $P_1x = P_1z$ so $z^{-1}$ conjugates $(P_1x, P_2y)$ to $(P_1, P_2)$.  The
@@ -302,12 +282,10 @@ $= \{ P_2y : y \in P_1 \}$ thus $P_1$ is transitive on $\Delta( \alpha )$.
 {\bf Theorem 26:}
 $\Gamma$ is connected iff $G= \langle P_1 , P_2 \rangle $.
 \begin{quote}
-\emph{Proof:}  
-Assume $G= \langle P_1 , P_2 \rangle$ and let $\Delta$ be a connected component of $\Gamma$ that contains
+\emph{Proof:}  Assume $G= \langle P_1 , P_2 \rangle$ and let $\Delta$ be a connected component of $\Gamma$ that contains
 $P_1$.  Since $P_1$ and $P_2$ are adjacent, $P_2 \in \Delta$.  Since different components are disjoint,
 $\Delta = \Delta^{\langle P_1, P_2 \rangle}= \Delta^G$ and thus $\Delta= \Gamma$ by (a) above.
-Now assume $\Gamma$ is connected and let $G_0= \langle P_1, P_2 \rangle$ and $\Gamma_0= 
-\{ P_1x: x \in G_0 \} \cup \{ P_xx: x \in G_0 \} $ be the coset graph of $G_0$ with respect to
+Now assume $\Gamma$ is connected and let $G_0= \langle P_1, P_2 \rangle$ and $\Gamma_0= \{ P_1x: x \in G_0 \} \cup \{ P_xx: x \in G_0 \} $ be the coset graph of $G_0$ with respect to
 $P_1, P_2$.  $\Gamma_0$ is connected.  If $\Gamma= \Gamma_0$ then $G= G_0$.  Assume $\Gamma \neq \Gamma_0$.
 Since $\Gamma$ is connected, $\exists \alpha, \beta \in \Gamma$ such that $\alpha \in \Gamma_0, \beta \in \Gamma
 - \Gamma_0$.  By (c) above, $\beta$ and all other elements of $\Delta( \alpha )$ are in $\Gamma - \Gamma_0$.
@@ -319,12 +297,10 @@ $(\alpha, \beta)$ is an edge.  The (1) $N_{G_{\delta}}(U)$ acts transitively on
 $\Delta(\delta), \delta \in \{ \alpha , \beta \}$ and (2) if $U \le G_{\alpha} \cap G_{\beta}$ then
 $U$ acts trivially on $\Gamma$.
 \begin{quote}
-\emph{Proof:}  
-(2) together with (c) implies (1) so we may assume (1) holds.
+\emph{Proof:}  (2) together with (c) implies (1) so we may assume (1) holds.
 Let $\Gamma_0= \alpha^{N_G(U)} \cup \beta^{N_G(U)}$.  $U$ fixes $\Gamma_0$.
 If $\gamma \in \Gamma_0$, $\exists g \in N_G(U)$ and $\delta \in \{ \alpha, \beta \}$ such that
-$\gamma= \delta^g$.  Then $\Delta( \delta^g ) = \Delta ( \gamma )$ and 
-$N_{G_{\gamma}}(U)= N_{G_{\delta}}(U)^g $.  By (1), $N_G(U)$ is transitive on $\Delta( \delta^g ) = \Delta( \gamma )$.
+$\gamma= \delta^g$.  Then $\Delta( \delta^g ) = \Delta ( \gamma )$ and $N_{G_{\gamma}}(U)= N_{G_{\delta}}(U)^g $.  By (1), $N_G(U)$ is transitive on $\Delta( \delta^g ) = \Delta( \gamma )$.
 One of $\alpha^g, \beta^g$ is adjacent to $\gamma$ and $\{ \alpha^g , \beta^g \} \subseteq \Gamma_0$.
 It follows that $\Delta( \gamma ) \subseteq \Gamma_0$.  By the previous result, $\Gamma$ is connected
 and we must have $\Gamma= \Gamma_0$ so $U$ stabilizes every vertex in $\Gamma$.
@@ -342,8 +318,7 @@ $G_{\alpha} = \langle t, G_{\alpha, \beta} \rangle$ for $t \in G_{\alpha} - G_{\
 (b) $|\Delta( \alpha )| =3$ and $O_2(G_{\alpha})= \bigcap_{\delta \in \Delta( \alpha )} (G_{\alpha} \cap G_{\beta})$,
 (c) $G_{\alpha}$ acts $2$-transitively on $\Delta( \alpha )$.
 \begin{quote}
-\emph{Proof:}  
-(a) follows from $P_1/O_2(P_i) \approx S_3$ and (b) and (c) follows from a previous result.
+\emph{Proof:}  (a) follows from $P_1/O_2(P_i) \approx S_3$ and (b) and (c) follows from a previous result.
 \end{quote}
 {\bf Notation:}
 For the remainder of the section, $Q_{\alpha}= O_2(G_{\alpha})$ and
@@ -355,10 +330,8 @@ Suppose ${\cal A}$ holds and $\alpha \in \Gamma$, $V \lhd G_{\alpha}$, $T \in S_
 $\Omega(Z(T)) \leq V \leq \Omega(Z(Q_{\alpha}))$ and $|V:\Omega(Z(T))|= 2$
 then
 $V= C_V(G_{\alpha}) \times W$, $W= [V, G_{\alpha}]$. $W= C_2 \times C_2$,
-$C_{G_{\alpha}}(W)= Q_{\alpha}$.  
-\begin{quote}
-\emph{Proof:}  
-Let $D \in S_3(G_{\alpha})$.  $V= C_V(D) \times W$, $W= [V,D]$.  By ${\cal A}$, since
+$C_{G_{\alpha}}(W)= Q_{\alpha}$.  \begin{quote}
+\emph{Proof:}  Let $D \in S_3(G_{\alpha})$.  $V= C_V(D) \times W$, $W= [V,D]$.  By ${\cal A}$, since
 $G_{\alpha}= DT$, $W \neq 1$ and thus $|W| \geq 4$.   Let $d \in D^{\#}$,
 $|V/ \Omega(Z(T))|=2=|V/ \Omega(Z(T^d))|$.  $G_{\alpha}= \langle T, T^d \rangle$ means
 $|V/C_V(G_{\alpha})| \leq 4$ so $C_V( G_{\alpha}) = C_V(D)$ and $|W|=4$.  The remainder follows from
@@ -372,35 +345,26 @@ Let ${\cal A}$ hold and $(\alpha, \beta)$ be an edge of $\Gamma$;
 (d) $Z_{\alpha}Z_{\eta} \lhd G_{\alpha}$ iff $\exists \gamma \in \Delta( \alpha) - \{ \beta \}$ such that
 $Z_{\alpha}Z_{\beta} = Z_{\alpha}Z_{\gamma} $.
 \begin{quote}
-\emph{Proof:}  
-(a) Let $T \in S_2(G_{\alpha})$ then $Q_{\alpha} \leq T$ and ${\cal A}$ implies 
-$\Omega(Z(Y)) \leq Z(Q_{\alpha})$.
-(b) By ${\cal A}$ and a previous result, 
-$Q_{\alpha}$ and $Q_{\beta}$ have index $2$ in $G_{\alpha} \cap G_{\beta}$ so it STS $
+\emph{Proof:}  (a) Let $T \in S_2(G_{\alpha})$ then $Q_{\alpha} \leq T$ and ${\cal A}$ implies $\Omega(Z(Y)) \leq Z(Q_{\alpha})$.
+(b) By ${\cal A}$ and a previous result, $Q_{\alpha}$ and $Q_{\beta}$ have index $2$ in $G_{\alpha} \cap G_{\beta}$ so it STS $
 Q_{\alpha} \neq Q_{\beta} $.
-If $Q_{\alpha} = Q_{\beta} $, 
-now two previous results show
+If $Q_{\alpha} = Q_{\beta} $, now two previous results show
 $G$ acts failthfully on $\Gamma$, and this contradicts ${\cal A}$.
 \end{quote}
 {\bf Theorem 31:}
 Let ${\cal A}$ hold and $(\alpha, \beta)$ be an edge of $\Gamma$.  The following are equivalent:
 (1) the conclusion of Goldschmidt's Theorem holds; (2) $Z \leq Q_{\beta}$.
 \begin{quote}
-\emph{Proof:}  
-Assume the conclusion of Goldschmidt's theorem holds.  For $\delta \in \{ \alpha \beta \}$,
-either 
-(i) $G_{\delta} = S_4$ and $Q_{\delta} \approx S_4 \times C_2$, or 
-(ii) $G_{\delta} = S_4 \times C_2$ and $Q_{\delta} \approx C_2 \times C_2 \times C_2$.  In either
+\emph{Proof:}  Assume the conclusion of Goldschmidt's theorem holds.  For $\delta \in \{ \alpha \beta \}$,
+either (i) $G_{\delta} = S_4$ and $Q_{\delta} \approx S_4 \times C_2$, or (ii) $G_{\delta} = S_4 \times C_2$ and $Q_{\delta} \approx C_2 \times C_2 \times C_2$.  In either
 case, $Z_{\delta} - Q_{\delta}$ and by the previous result $Z_{\alpha} \nleq Q_{\beta}$.
 Set $T= Q_{\alpha} Q_{\beta}$ and $E= Q_{\alpha} \cap Q_{\beta}$.  The previous result gives
-$T \in S_2(G_{\delta})$ and $|T/Q_{\delta}|=2$.  Thus 
-$ |Q_{\alpha}:E|=2= |Q_{\beta}:E| $ and
+$T \in S_2(G_{\delta})$ and $|T/Q_{\delta}|=2$.  Thus $ |Q_{\alpha}:E|=2= |Q_{\beta}:E| $ and
 $T= Q_{\beta}Z_{\alpha}$ and
 $Q_{\alpha}= E Z_{\alpha}$.
 Todo, more.
 \end{quote}
-{\bf Definition 5:} 
-$\alpha, \alpha'$ is a \emph{critical pair} if $Z_{\alpha} \nleq Q_{\alpha'}$ and
+{\bf Definition 5:} $\alpha, \alpha'$ is a \emph{critical pair} if $Z_{\alpha} \nleq Q_{\alpha'}$ and
 $b=d(\alpha, \alpha')$.  Let $b$ be minimal.
 \\
 \\
@@ -413,9 +377,7 @@ $R = [Z(G_{\alpha}), G_{\alpha+1}) \cap G_{\alpha}]= [Z(G_{\alpha'}), G_{\alpha'
 $[ Z_{\alpha} , G_{\alpha} ] = C_2 \times C_2$;
 (e) $|Z_{\alpha}:\Omega(Z(Y))|=2$ for $Y \in S_2(G_{\alpha})$.
 \begin{quote}
-\emph{Proof:}  
-Minimality of $(b)$ implies 
-$Z_{\alpha} \leq Q_{\alpha'-1} \leq G_{\alpha'-1} \cap G_{\alpha'} $ and
+\emph{Proof:}  Minimality of $(b)$ implies $Z_{\alpha} \leq Q_{\alpha'-1} \leq G_{\alpha'-1} \cap G_{\alpha'} $ and
 $Z_{\alpha'} \leq Q_{\alpha+1} \leq G_{\alpha+1} \cap G_{\alpha} $.
 $Z_{\alpha} \nleq Q_{\alpha'}$ shows that
 $G_{\alpha'-1} \cap G_{\alpha'} = Z_{\alpha} Q_{\alpha} $ since $Q_{\alpha'}$ has index $2$ in
@@ -442,8 +404,7 @@ $\alpha'$ are conjugate and $b$ is even.
 \emph{Proof:}   Since $(\alpha-1, \alpha'-1)$ is not critical, $Z_{\alpha-1}, Z_{\alpha'}] \leq R \leq Z_{\alpha}$,
 so $\langle Z_{\alpha'}, G_{\alpha} \cap G_{\alpha-1} \rangle \subseteq N(Z_{\alpha-1}Z_{\alpha})$.  The previous result
 gives (a). (b) follows by a previous result and the fact that $G_{\alpha}$ is transisitve on $\Delta( \alpha )$.
-Either 
-$\alpha \in (\alpha')^G$ or
+Either $\alpha \in (\alpha')^G$ or
 $\alpha \in (\alpha'-1)^G$ , so the former holds and $b$ is even.
 For (c), note $\alpha$ and $\alpha'-1$ are conjugate so
 $G_{\alpha}$ and $G_{\alpha'-1}$ are conjugate.  Then (b) gives $Z_{\alpha} \leq
@@ -454,12 +415,10 @@ Q_{\alpha'-1} \cap Q_{\alpha'} $.  This contradicts $Z_{\alpha} \nleq Q_{\alpha'
 Suppose $\alpha - 1 \in \Delta(\alpha) - \{ \alpha+1 \}$ such that  $(\alpha-1, \alpha'-1)$ is a critical pair
 then $b=1$.
 \begin{quote}
-\emph{Proof:}  
-Put $R_1= [Z_{\alpha - 1}, Z_{\alpha' - 1}]$.  Assume $b > 1$.
-$Z_{\alpha} \leq Q_{\alpha+1}$ and $Z_{\alpha'} \leq Q_{\alpha'-1}$.  $(\alpha - 1, \alpha' - 1)$ is a 
-critical pair so $|R_1'| =2$.  
-$R_1 = [Z_{\alpha - 1}, G_{\alpha - 1} \cap G_{\alpha}] \leq (Z(G_{\alpha - 1} \cap  Z(G_{\alpha})) 
-\cap (Z(G_{\alpha' - 2} \cap  Z(G_{\alpha' - 1}))$.  $R_1 \leq [Z_{\alpha - 1}, Z_{\alpha' - 1}]$, so $[R_1, Z_{\alpha'}] = 1$.
+\emph{Proof:}  Put $R_1= [Z_{\alpha - 1}, Z_{\alpha' - 1}]$.  Assume $b > 1$.
+$Z_{\alpha} \leq Q_{\alpha+1}$ and $Z_{\alpha'} \leq Q_{\alpha'-1}$.
+$(\alpha - 1, \alpha' - 1)$ is a critical pair so $|R_1'| =2$.
+$R_1 = [Z_{\alpha - 1}, G_{\alpha - 1} \cap G_{\alpha}] \leq (Z(G_{\alpha - 1} \cap  Z(G_{\alpha})) \cap (Z(G_{\alpha' - 2} \cap  Z(G_{\alpha' - 1}))$.  $R_1 \leq [Z_{\alpha - 1}, Z_{\alpha' - 1}]$, so $[R_1, Z_{\alpha'}] = 1$.
 $\langle Z_{\alpha'} , G_{\alpha - 1} \cap G_{\alpha} \rangle = G_{\alpha}$.
 \\
 \\
@@ -487,8 +446,7 @@ If not, $Z_{\alpha'} \leq Q_{\alpha' - 2}$, $[R_2, Z_{\alpha'}] = 1= [R_2, G_{\a
 This contradicts $|R_2|=2$.\\
 \\
 (6) $b = 2$\\
-If $b>2$, 
-$V_{\alpha} = \langle Z_{\beta}, \beta \in \Delta(\alpha) \rangle \lhd G_{\alpha}$.
+If $b>2$, $V_{\alpha} = \langle Z_{\beta}, \beta \in \Delta(\alpha) \rangle \lhd G_{\alpha}$.
 $V_{\alpha + 1} = \langle Z_{\beta}, \beta \in \Delta(\alpha + 1) \rangle \lhd G_{\alpha + 1}$.
 $V_{\alpha} \leq Q_{\alpha}$,
 $V_{\alpha + 1} \leq Q_{\alpha + 1}$, and
@@ -501,8 +459,7 @@ ${V_{\alpha}}' = R_1 \leq Z(G_{\alpha})$.
 We show $V_{\alpha}$ is abelian and $V_{\alpha}$ is generated by involutions.
 $V_{\alpha} / R_1$ is elementary abelian so $R_1 = \Phi(V_{\alpha})$ and $R = \Phi(V_{\alpha + 1})$, put
 ${\overline {V_{\alpha}}} = V_{\alpha} / Z_{\alpha}$.  We get $Z_{\beta}/(Z_{\alpha} \cap Z_{\beta})= 2, \forall \beta \in \Delta(\alpha)$,
-so $|{\overline {Z_{\beta}}}| = 2$.  ${\overline {V_{\alpha}}} = \langle Z_{\beta}, \beta \in \Delta(\alpha)\rangle$, so 
-$|{\overline {V_{\alpha}}}| \leq 8$.  Set $W= V_{\alpha} \cap V_{\alpha + 1} \lhd G_{\alpha} \cap G_{\alpha + 1}$ then
+so $|{\overline {Z_{\beta}}}| = 2$.  ${\overline {V_{\alpha}}} = \langle Z_{\beta}, \beta \in \Delta(\alpha)\rangle$, so $|{\overline {V_{\alpha}}}| \leq 8$.  Set $W= V_{\alpha} \cap V_{\alpha + 1} \lhd G_{\alpha} \cap G_{\alpha + 1}$ then
 $Z_{\alpha}Z_{\alpha + 1} \leq W$ and\\
 \\
 (8)  $V_{\alpha} = \langle W^{G_{\alpha}} \rangle$.\\
@@ -531,11 +488,9 @@ ${\overline W} = [{\overline {V_0}}, Z_{\alpha'}], \langle {\overline W}^{G_{\al
 contradicts (8), (9) and (10).
 \end{quote}
 {\bf Goldschmidt's Theorem:}
-If ${\cal A}$ holds either (i) $P_1 \approx P_2 \approx S_4$ or 
-(ii) $P_1 \approx P_2 \approx C_2 \times S_4$.
+If ${\cal A}$ holds either (i) $P_1 \approx P_2 \approx S_4$ or (ii) $P_1 \approx P_2 \approx C_2 \times S_4$.
 \begin{quote}
-\emph{Proof:}  
-Let $G$ be a counter example and choose $(G, P_1, P_2, T)$ with $|T|$ minimal.
+\emph{Proof:}  Let $G$ be a counter example and choose $(G, P_1, P_2, T)$ with $|T|$ minimal.
 $b > 1$ and $(\alpha - 1, \alpha' - 1)$ is not a critical pair $\forall \alpha - 1 \in \Delta(\alpha) \setminus \{\alpha + 1 \}$.
 \\
 \\
@@ -585,8 +540,7 @@ $\Phi(O_2(L))=1$ which contradicts (3) and (4).\\
 \\
 Put $\Delta(\beta) = \{ \alpha, \delta, \gamma \}$ and $V_{\beta}= \langle Z_{\alpha}, Z_{\beta}, Z_{\gamma} \rangle \lhd G_{\beta}$.
 If $x \in Q_{\alpha} \setminus Q_{\beta}$ interchanges $\gamma$ and $\delta$ and normalized $L$.
-If $\langle Z_{\alpha} , Z_{\gamma} \rangle$ is normal in $L$ and also 
-$\langle Z_{\alpha}, Z_{\delta} \rangle = \langle Z_{\alpha}, Z_{\gamma}^x \rangle$ is normal in $L$.  Thus $V_{\beta}$ is normal
+If $\langle Z_{\alpha} , Z_{\gamma} \rangle$ is normal in $L$ and also $\langle Z_{\alpha}, Z_{\delta} \rangle = \langle Z_{\alpha}, Z_{\gamma}^x \rangle$ is normal in $L$.  Thus $V_{\beta}$ is normal
 in $L$ (which is not contained in $G_{\alpha} \cap G_{\beta}$) which contradiction!\\
 \\
 (6) Let $b \geq 4, \alpha - 1 \in \Delta(\alpha) \setminus \{ \alpha + 1 \}$ and
@@ -627,8 +581,7 @@ $Q \lhd G_0$ shows $[Q, D] = 1$ which contradicts (4).
 This contradicts (4) since $D_2$ is a $G_0$ conjugate of $D \in S_3(G_{\alpha})$.
 Assume $(\alpha - 2, \alpha' - 2)$ is not normal in $L$.
 \end{quote}
-{\bf Amalgam example 1:} $G= S_6$, $a=(12)$, $b=(12)(34)(56)$.  $P_1 = C_G(a)$, $P_2 = C_G(b)$.  
-$P_1 = \langle a \rangle \times \langle (34)(56) \rangle \times \langle (35)(46) \rangle$.
+{\bf Amalgam example 1:} $G= S_6$, $a=(12)$, $b=(12)(34)(56)$.  $P_1 = C_G(a)$, $P_2 = C_G(b)$.  $P_1 = \langle a \rangle \times \langle (34)(56) \rangle \times \langle (35)(46) \rangle$.
 \\
 \\
 {\bf Amalgam example 2:} $G= SL_3(2)$, $|G|=168$.
