--- a/groups/gtBasic.tex
+++ b/groups/gtBasic.tex
@@ -25,7 +25,7 @@ ${\cal SCN}(p)= {\cal SCN}(P)$ where $P \in {\cal SCN}(P)$.
 \\
 {\bf Definition 4.5:} If $\pi = \{ p_1, p_2, \ldots , p_k\}$ is a set of primes, we say
 $G$ is a $\pi$ group if the only primes dividing $|G|$ are in $\pi$.  If $G$ is a finite
-group and $H \leq G$, we say $H$ is an $S_{\pi}$ group if $H$ is a $\pi$ group and 
+group and $H \leq G$, we say $H$ is an $S_{\pi}$ group if $H$ is a $\pi$ group and
 $p \nmid |G:H|$  if $p \in \pi$.  $S_{\pi}(G)$  is the set of all $S_{\pi}$ subgroups of
 $G$. For $\pi = \{ p \}$, we call an $S_{\pi}$ group and $S_p$ group and put $S_{\pi}(G) = S_p(G)$.
 $S_p(G)$ is just the sylow subgroups of $G$.
@@ -34,31 +34,31 @@ $S_p(G)$ is just the sylow subgroups of $G$.
 {\bf Definition 5:}
 ${\cal N}_G(A, \pi)=$ set of all $A-$invariant $\pi$ subgroups of $G$.
 ${\cal N}_G^*(A, \pi)=$ maximal subgroups in ${\cal N}_G(A, \pi)$.  For a $p-$group, $P$,
-$\Omega_n(P)= 
+$\Omega_n(P)=
 \langle x \in P: x^{p^n}=1 \rangle $ and
 $\mho_n(P)= \langle x^{p^n}: x \in P \rangle $.
 \\
 \\
 {\bf Definition 6:} Let $H \subseteq G$ and let $S$ be an $H$-invariant subset of $G$;
-$H$ is said to 
+$H$ is said to
 control fusion in $S$ if for $s \in S$, $s^G \cap S = s^H$.
 Let $X \le H \le G$.  $X$ is \emph{weakly closed} in $H$ with respect to $G$ if
 $X^g \cap H = \{X\}$.\\
 \\
 {\bf Definition 7:}
-$G$ is $p$\emph{-constrained} if 
+$G$ is $p$\emph{-constrained} if
 $P \in S_p ( O_{p',p} (G))$ implies $C_G(P) \subseteq O_{p',p} (G)$.
 Equivalently, if $O_{p'}(G)=1$ then $C_G(O_p(G)) \subseteq O_p(G)$ and $F(G)= O_p(G)$..
 \\
 \\
 {\bf Definition 8:}
 $Z$ is \emph {weakly closed} in $P$ with respect to $G$ if $Z^g \subseteq P \rightarrow Z^G=Z$.
-The \emph {weak closure} of $Z$ in $P$ with respect to $G$ is $wcl_G(Z, P)= 
+The \emph {weak closure} of $Z$ in $P$ with respect to $G$ is $wcl_G(Z, P)=
 \langle Z^g, Z^g \subseteq P \rangle $.
 \\
 \\
 {\bf Definition 9:}
-$G$ is $p$\emph{-stable} if $p \ne 2$ and 
+$G$ is $p$\emph{-stable} if $p \ne 2$ and
 if $A \in p(N(P))$ with $[P,A,A]= 1$ implies $A C(P)/C(P) \subseteq O_p (N(P)/C(P))$.
 \\
 \\
@@ -109,7 +109,7 @@ either a $\pi$ group or a $\pi'$ group.
 {\bf Definition 19:} $G$ is $p$-closed if $O_p(G)= O^{p'}(G)$.
 \\
 \\
-{\bf Definition 20:} 
+{\bf Definition 20:}
 $O^{\cal K}(G)= \bigcap_{A \lhd G, G/A \in {\cal K}} A$.
 $O_{\cal K}(G)= \bigcap_{A \lhd G, A \in {\cal K}} A$.
 \\
@@ -120,8 +120,8 @@ $O_{p'}(G)$ is called the $p$\emph{-core} of $G$. $O_{2'}(G)$ is often called th
 \\
 \\
 {\bf Definition 22:}
-$G$ is 
-\emph{metacyclic} if $\exists H \lhd G: G/H ,H$ are cyclic. 
+$G$ is
+\emph{metacyclic} if $\exists H \lhd G: G/H ,H$ are cyclic.
 \\
 \\
 {\bf Notation:}  Let $G$ be a finite group, $x, y \in G$, $U, V \subseteq G$,
@@ -136,7 +136,7 @@ $A \subseteq Aut(G)$.
 {\bf Theorem 1:}
 $ [x, y^{-1}, z] [y, z^{-1}, x] [z, x^{-1}, y]=1$
 (\emph{Jacobi Identity}).
-$[ab,c]= [a,c]^b [b,c]$ and $[a,bc]=[a,c] [a,b]^c$.  
+$[ab,c]= [a,c]^b [b,c]$ and $[a,bc]=[a,c] [a,b]^c$.
 \begin{quote}
 \emph{Proof:} Straightforward calculations.
 \end{quote}
@@ -149,7 +149,7 @@ $[C,A,B] \subseteq N$.
 \\
 {\bf Dedekind's Lemma:}  If $G=HK$ and $H \subseteq G_0$ then $G_0 = H(G_0 \cap K)$.
 \begin{quote}
-\emph {Proof:} 
+\emph {Proof:}
 $g_0=hk$ so $g_0 h^{-1} \in G_0 \cap K$ (since $h \in G_0$).
 \end{quote}
 {\bf Theorem 2:}  If $x,y \in G$ , $z=[x,y]$, $[z, x]=1=[z,y]$ then (1) $[x^n, y^m]=z^{mn}$ and
@@ -164,7 +164,7 @@ so $[x^n,y^{m+1}]= z^n y^{-1} (z^{mn}) y = z^n z^{mn}= z^{n(m+1)}$ which proves 
 \\
 \\
 \emph {Proof of 2:} Again, the proof is by induction on $n$; it is true for $n=1$.
-$(yx)^{n+1}= (yx)^n (yx)= 
+$(yx)^{n+1}= (yx)^n (yx)=
 z^{\frac {n(n-1)} {2}} y^n x^n y x= y^{n+1} x^n (x^{-n} y^{-1} x^n y) x
 = z^{\frac {n(n-1)} {2}} y^{n+1} x^n z^n x= z^{\frac {n(n+1)} 2} y^{n+1} x^{n+1}$.
 \end{quote}
@@ -174,19 +174,18 @@ If  $H \; char \; K$ and $K \;  char \; G$ then $H \; char \; G$.
 \\
 {\bf Theorem 4:}
 If $H, K < G$, $[H,K] \lhd \langle H, K \rangle$.
-If $H, K, L \lhd G$ then $[HK,L]= [H,L] [K, L]$. 
+If $H, K, L \lhd G$ then $[HK,L]= [H,L] [K, L]$.
 $[xy,z]= [x,z] [x,z,y] [y,z]$.
 $[x, yz]= [x,z] [x,y] [x,y,z]$.
 \begin{quote}
-\emph{Proof:}  
+\emph{Proof:}
 Straightforward.
 \end{quote}
 {\bf Theorem 5:}
 If $A$ is a cyclic group of maximal order in and abelian group $G$, then $A$ is a direct
 factor of $G$.
 \begin{quote}
-\emph{Proof:}  
-By induction on $|G|$.
+\emph{Proof:}  By induction on $|G|$.
 $G$ must possess a non-cyclic abelian $S_p$ group for some $p$.
 $\exists H: pH=1, H \cap A = \{ 1 \}$, set ${\overline G}= G/H$.
 If $|{\overline A}|= |A|$, the result follows by induction so
@@ -198,12 +197,10 @@ and the result follows.
 {\bf Theorem 6:}
 If $H \lhd G$ and $(|G:H|, |H|)=1$ then $H \; char \; G$.
 \begin{quote}
-\emph{Proof:}  
-Let $\phi$ be an automorphism that does not fix $H$ and put $H'= \phi(H)$.
+\emph{Proof:}  Let $\phi$ be an automorphism that does not fix $H$ and put $H'= \phi(H)$.
 $H H'$ is a subgroup of $G$ and
 $|H H'| > |H|$.  ${\frac {(H H')} {H}} \cong {\frac {H'} {H \cap H'}}$.
-Put $k= |H H'|, m= |G:H|, n= |H|, d= | H \cap H' |$,  then 
-$ 1 < k'= {\frac {k} {n}} =  {\frac n d}$ and $k' \mid n$.  So $dk'= n$ and $(k', d)=1$,
+Put $k= |H H'|, m= |G:H|, n= |H|, d= | H \cap H' |$,  then $ 1 < k'= {\frac {k} {n}} =  {\frac n d}$ and $k' \mid n$.  So $dk'= n$ and $(k', d)=1$,
 thus $d=1, H = H'$ and the result follows.
 \end{quote}
 {\bf Theorem 7:}
@@ -211,8 +208,7 @@ Let $H$ be an elementary abelian $p$-group of $G$ and $x \in N_G(H)$ and let $\p
 be the linear transformation induced by $x$ on $H$ then the minimal polynomial of
 $\phi_x$ is $(x-1)^r$, where $[h,x, \ldots, x]= 1$ and $x$ appears $r$ times.
 \begin{quote}
-\emph{Proof:}  
-Straightforward calculation.
+\emph{Proof:}  Straightforward calculation.
 \end{quote}
 {\bf Theorem 8:}  If $G$ has no non-trivial characteristic subgroups then
 $G= \bigoplus_{i=1}^n H_i$, where $H_1 \cong H_i, \forall i$, and $H_i$ is
@@ -222,8 +218,7 @@ simple.
 Now let $H \le G$ be maximal subject to (a) $H=H_1 H_2 \ldots H_n$, (b) $H_1 \cong H_i$,
 (c) $H_i \lhd G$ and (d)
 $H=H_1 H_2 \ldots H_{i-1} H_{i+1} \ldots H_n \cap H_i = 1$.  Claim:  $H=G$.  Observe
-$1 \ne H \; char \; G$; if $\phi \in Aut(G)$, 
-$H_i^{\phi} \lhd G$.
+$1 \ne H \; char \; G$; if $\phi \in Aut(G)$, $H_i^{\phi} \lhd G$.
 So $H_i^{\phi} \cap H \lhd G$.
 If $H_i^{\phi} \cap H =1$, $H$ is not maximal and if
 $H_i^{\phi} \cap H 1\ge $, $H_1$ is not minimal.
