--- a/groups/gtCNclass.tex
+++ b/groups/gtCNclass.tex
@@ -7,11 +7,10 @@
 \begin{quote}
 \emph{Proof:} Subgroups of nilpotent groups are nilpotent.
 \end{quote}
-{\bf Theorem:} 
-If $G$ is a $CN$-group and 
+{\bf Theorem:}
+If $G$ is a $CN$-group and
 $P \in S_p(G)$ and
-$Q \in S_q(G)$, $p \ne q$.  If 
-$x \in P^{\#}$ and $y \in Q^{\#}$ and $[x,y]=1$ then $[P,Q]=1$.
+$Q \in S_q(G)$, $p \ne q$.  If $x \in P^{\#}$ and $y \in Q^{\#}$ and $[x,y]=1$ then $[P,Q]=1$.
 \begin{quote}
 \emph{Proof:}  If $H$ is nilpotent and $a, b$ are $p$ and $q$ elements with $p \neq q$ then $[a,b] =1$.
 $\langle y, {\mathbb Z}(P) \rangle \subseteq C(x)$.  Since $C(x)$ is nilpotent, $[y, {\mathbb Z}(P)] =1$.
@@ -19,8 +18,7 @@ Let $t \in {\mathbb Z}(P)^{\#}$. $\langle y, P \rangle \subseteq C(t)$ so $[P,y]
 $[Q,x]=1$.  Now, let $u \in {\mathbb Z}(Q)^{\#}$, $\langle y, Q \rangle \subseteq C(u)$ so $[y, Q] = 1$.
 Thus $\langle P, Q \rangle \subseteq C(y)$ and $[P, Q]=1$.
 \end{quote}
-{\bf Theorem:} 
-If $G$ is a $CN$-group and $H \lhd G$ is solvable then $G/H$ is a $CN$-group.
+{\bf Theorem:} If $G$ is a $CN$-group and $H \lhd G$ is solvable then $G/H$ is a $CN$-group.
 \begin{quote}
 \emph{Proof:} First, prove it for $H$ elementary abelian.  If $L$ is a characteristically simple subgroup
 of $H$, $L$ is elementary abelian since $H$ is solvable.  $G/L$ is nilpotent by the previous result.
@@ -46,8 +44,7 @@ odd order and a generalized quaternion group;
 \emph{Proof:}
 $F=F(G)$ so $C_G(F) \subseteq F$.
 \end{quote}
-{\bf Theorem:} 
-If $G$ is a $CN$-group and $O_p(G) \ne 1$ then either $O_p(G)$ is an $S_p$ group
+{\bf Theorem:} If $G$ is a $CN$-group and $O_p(G) \ne 1$ then either $O_p(G)$ is an $S_p$ group
 of $G$ or $G$ is a $3$-step group.
 \begin{quote}
 \emph{Proof:}
@@ -76,8 +73,7 @@ subgroup of $G$ is a $3$-step group.
 maximal with respect to being nilpotent.
 \\
 \\
-{\bf Theorem:} 
-Let $G$ be a minimal simple $CN$-group of odd order, $H \in {\cal H}$, then (1)
+{\bf Theorem:} Let $G$ be a minimal simple $CN$-group of odd order, $H \in {\cal H}$, then (1)
 $H$ is a Hall group of $G$ and is disjoint from its conjugates, (2) $N_G(H)$ is Frobenius with
 kernel $H$ and is maximal.  Conversely, every maximal subgroup of $G$ is a Frobenius whose
 kernel is in ${\cal H}$.
@@ -105,12 +101,10 @@ then
 (1) $H$ is a Hall group of $G$;
 (2) If $|H|$ is not a of prime power order then $H$ is disjoint from its conjugates;
 (3) If $H$ is disjoint from its conjugates then $C_G(x) \subseteq H, \forall x \in H^{\#}$;
-(4) If $H$ is disjoint from its conjugates and $H$ has even order then 
-$C_G(x) \subseteq H, \forall x \in H^{\#}$.
+(4) If $H$ is disjoint from its conjugates and $H$ has even order then $C_G(x) \subseteq H, \forall x \in H^{\#}$.
 \begin{quote}
 \end{quote}
-{\bf Theorem:} 
-Let $G$ be a minimal simple $CN$-group of odd order, $H_i$ are representatives of
+{\bf Theorem:} Let $G$ be a minimal simple $CN$-group of odd order, $H_i$ are representatives of
 the conjugacy classes of the elements of ${\cal H}$.  Put $h_i= |H_i|$ and
 $|N(H_i)|=n_i h_i$. Then (1) $n_i > 1$, $n_i \mid (h_i - 1)$, $n_ih_i \mid |G|$, $(h_i, h_j)=1$
 if $i \ne j$, and (2) $\sum_{i=1}^{r} {\frac {h_i - 1} {h_i n_i}} = 1 - {\frac 1 {|G|}}$.
@@ -118,8 +112,7 @@ if $i \ne j$, and (2) $\sum_{i=1}^{r} {\frac {h_i - 1} {h_i n_i}} = 1 - {\frac 1
 \end{quote}
 {\bf Hall-Feit-Thompson:} $CN$-groups of odd order are solvable.
 \begin{quote}
-\emph{Proof:}  
-By induction. Let $G$ be a minimal simple $CN$-group of odd order.
+\emph{Proof:}  By induction. Let $G$ be a minimal simple $CN$-group of odd order.
 Set $M_i = N_G(H_i), 1 \leq i \leq r$.  We derive properties of the irreducible characters of
 the $M_i$.
 These properties show that $|G|=p^a q^b$ and so $G$ is solvable by Burnside's theorem.
