--- a/groups/gtClassify.tex
+++ b/groups/gtClassify.tex
@@ -31,8 +31,8 @@ ${\mathbb Z}^*(G)/O_{2'}(G) \cong C_2$.
 dihedral then $F^*(G)$ is isomorphic to $PSL_2(q), q=1 \jmod{2}$ or $A_7$.
 \\
 \\
-{\bf Alperin, Brauer, Gorenstein:} Suppose $G$ is simple and the Sylow 
-$2$-subgroups are semi-dihedral then $G$ is isomorphic to 
+{\bf Alperin, Brauer, Gorenstein:} Suppose $G$ is simple and the Sylow
+$2$-subgroups are semi-dihedral then $G$ is isomorphic to
 $PSL_3(q), q= -1 \jmod{4}$,
 $PSU_3(q), q= 1 \jmod{4}$,
 or $M_{11}$.
@@ -41,7 +41,7 @@ or $M_{11}$.
 {\bf Bender:} Suppose $G$ possesses a strongly embedded subgroup then the Sylow
 $2$-subgroups of $G$ are cyclic or quaternion or $G$ possesses a normal series
 $1 \lhd M \lhd L \lhd G$ such that $M$, and $G/L$ have odd order and
-$L/M$ is isomorphic to 
+$L/M$ is isomorphic to
 $PSL_2(2^n)$, $Sz(2^{2n-1})$, or $PSU_3(2^n), n \ge 2$.
 \\
 \\
@@ -72,26 +72,26 @@ every involution $x$.
 \\
 \\
 {\bf Example of groups of semi-simple type:} $GL_n(q)$, $q$, odd, $t \in Inv(G)$ has
-form 
+form
 $t= \left(
 \begin{array}{cc}
 -I_m & 0\\
 0 & I_r\\
 \end{array}
-\right), n= m+r$ and 
+\right), n= m+r$ and
 $C_G(t)= \left(
 \begin{array}{cc}
 A & 0\\
 0 & B\\
 \end{array}
-\right)$, 
+\right)$,
 $A \cong GL_m(q)$ and
 $B \cong GL_r(q)$. \\
 \\
-{\bf Definition:} 
+{\bf Definition:}
 $e(G)= max \{ m_p(H),
 H \le G  \textnormal{ is a } 2-\textnormal{local and } p \ne 2 \}$.
-A group $G$ is \emph{quasi-thin} if 
+A group $G$ is \emph{quasi-thin} if
 $m_2(G) \ge 3$ but every $e(G) \le 2$.
 \\
 \\
@@ -100,15 +100,13 @@ $2$-type ($C_H(O_p(H)) \le O_p(H)$) where $H$ is a $2$-local (Lie type $q= 2^n$)
 groups are quasi-thin (2) $G$ is not of characteristic $2$-type, small groups have
 $m_2(G) \le 2$.
 \section{Connected Groups}
-{\bf Definition:}  
-Let $\Omega_G$ be a collection of subgroups of $G$ \emph{define}
+{\bf Definition:}  Let $\Omega_G$ be a collection of subgroups of $G$ \emph{define}
 ${\cal D}(\Omega_G)$ as the graph with points $\Omega_G$; two points
 $A,B \in \Omega_G$ are joined by an edge if $[A,B]=1$.  Note that $G$ acts as a
 group of automorphisms on ${\cal D}(\Omega_G)$ via conjugation.
 \\
 \\
-{\bf Theorem:} 
-Let $\Delta$ be a $G$-invariant collection of subgroups of $G$ and $H < G$.
+{\bf Theorem:} Let $\Delta$ be a $G$-invariant collection of subgroups of $G$ and $H < G$.
 The following are equivalent:
 (1) $H$ controls fusion in $H \cap \Delta$ and $N_G(X) \le H$ for $x \in H \cap \Delta$;
 (2) $H \cap H^g \cap \Delta= \emptyset$ if $g \in G \setminus H$;
@@ -117,8 +115,7 @@ of $G$ on $G/H$ by right multiplication;
 (4) $H \cap \Delta$ is the uniion of a set, $\Gamma$, of connected components of
 ${\cal D}(\Delta)$ and $\Gamma \cap \Gamma^g= \emptyset$ if $g \in G \setminus H$.
 \begin{quote}
-\emph{Proof:}  
-\\
+\emph{Proof:}  \\
 \\
 $1 \rightarrow 2$:
 Let $g \in G$ with $H \cap H^g \cap \Delta \ne \emptyset$.  $\exists X \in H \cap \Delta$
@@ -140,43 +137,33 @@ $A^g \le H$ so $\{ H \} = Fix(A^g ) = \{ Hg \}$ and $g \in H$.
 \\
 \\
 $4 \rightarrow 1$:
-If $X \in H \cap \Delta$ and $g \in G$ with $X^g \le H$ then 
-$X \in \theta \in \Gamma$ and
+If $X \in H \cap \Delta$ and $g \in G$ with $X^g \le H$ then $X \in \theta \in \Gamma$ and
 $X^g \in \theta' \in \Gamma$, so $\theta' = \theta^g \in \Gamma \cap \Gamma^g$ hence
 $g \in H$.
 \end{quote}
-{\bf Definition:}  
-Define ${\cal E}_k^p(G)$ to be the set of all elementary abelian
+{\bf Definition:}  Define ${\cal E}_k^p(G)$ to be the set of all elementary abelian
 $p$-subgroups of $G$ of $p$-rank at least $k$. $G$ is said to be $k$\emph{-connected}
-for the prime $p$ if ${\cal D}({\cal E}_k^p(G))$ is connected.  
-Define $\Gamma_{P,k}(G) = \langle N_G(X), X \rangle \le P, m(X) \ge k \rangle$ and
-$\Gamma_{P,k}^0(G) = \langle N_G(X), X \le P, m(X) \ge k, m(XC_P(X)) > k \rangle$.  
-If $P \in S_p(G)$ then
+for the prime $p$ if ${\cal D}({\cal E}_k^p(G))$ is connected.  Define $\Gamma_{P,k}(G) = \langle N_G(X), X \rangle \le P, m(X) \ge k \rangle$ and
+$\Gamma_{P,k}^0(G) = \langle N_G(X), X \le P, m(X) \ge k, m(XC_P(X)) > k \rangle$.  If $P \in S_p(G)$ then
 $\Gamma_{P,k}(G)$ is called the \emph{$k$-generated $p$-core of $G$}.
 \\
 \\
-{\bf Theorem:} 
-Let $P$ be a $p$-group.  Then 
-(1) $P$ is $1$-connected for the prime $p$;
+{\bf Theorem:} Let $P$ be a $p$-group.  Then (1) $P$ is $1$-connected for the prime $p$;
 (2) If $m(P) > 2$, $\exists E_{p^2} \cong U \lhd P$ and $X \in {\cal E}_2^p(P)$ is in
 the same connected component of ${\cal D}({\cal E}_k^p(P))$ as $U$ when
 $m(C_P(X)) > 2$;
 (3) If $p=2$ and $\exists E_{8} \cong U \lhd P$ then $P$ is $2$-connected for the prime $2$;
 (4) If $p=3$ and $m(P) > 3$ then $P$ is $2$-connected for the prime $3$.
 \begin{quote}
-\emph{Proof:}  
-(1) follows from ${\mathbb Z}(G) \ne 1$.  Assume $m(G) > 2$ then
+\emph{Proof:}  (1) follows from ${\mathbb Z}(G) \ne 1$.  Assume $m(G) > 2$ then
 there is an $E_{p^2} \cong  U \lhd G$ and $G/C_G(U) \le SL_2(p)$ and
-$SL_2(p)$ is of $p$-rank $1$.  If $A \in {\cal E}^2_3(G)$ then 
-$m(C_A(U) )  \ge 2$
+$SL_2(p)$ is of $p$-rank $1$.  If $A \in {\cal E}^2_3(G)$ then $m(C_A(U) )  \ge 2$
 so $m(UC_A(U)) > 2$ and
-$m(C_A(U) ) > 2$.  If 
-$U \ne E \in {\cal E}^p_2(G)$ is in the same connected component
+$m(C_A(U) ) > 2$.  If $U \ne E \in {\cal E}^p_2(G)$ is in the same connected component
 as $U$, then
 $\exists D: E \ne D \in {\cal E}^p_2(G)$ and $E$ is adjacent to $D$ and
 further,  $m(C_G(E)) \ge m(DE) \ge 3$.  All we need to show is that
-$A \in {\cal E}^p_2(G)$ is in the same connected component as $U$. 
-But $\langle A, C_A(U), U C_A(U), U \rangle$ is in a path of
+$A \in {\cal E}^p_2(G)$ is in the same connected component as $U$. But $\langle A, C_A(U), U C_A(U), U \rangle$ is in a path of
 ${\cal D}({\cal E}^p_2(G))$ completing 2.
 Assume $p = 2$ and $E_8 \cong V \lhd G$ and let
 $E \in {\cal E}^p_2(G)$, we must show there is a path from $E$ to $V$.
@@ -186,16 +173,13 @@ ${\cal D}({\cal E}^p_2(G))$.
 $\exists E_8 \cong V \lhd G$
 and the argument above establishes 4.
 \end{quote}
-{\bf Theorem:} 
-Let $H \le G, P \in S_p(H)$ and $k \in {\mathbb Z}^+$.  Then
+{\bf Theorem:} Let $H \le G, P \in S_p(H)$ and $k \in {\mathbb Z}^+$.  Then
 (1) If $m(p) \ge k$ and $\Gamma_{P,k}(G) \le H$ then $P \in S_p(G)$; and
 (2) If $m(p) > k$ and $\Gamma_{P,k}^0(G) \le H$ then $P \in S_p(G)$.
 \begin{quote}
-\emph{Proof:}  
-Follows from previous result.
+\emph{Proof:}  Follows from previous result.
 \end{quote}
-{\bf Theorem:} 
-Let $H \le G$, $P \in S_p(G)$ and $m(p) \ge k$.  Then the following are equivalent:
+{\bf Theorem:} Let $H \le G$, $P \in S_p(G)$ and $m(p) \ge k$.  Then the following are equivalent:
 (1) $\Gamma_{P,k}(G)<H$;
 (2) $H$ controls fusion in ${\cal E}_k^p(H)$ and $N_G(X) \le H$ for
 $x \in {\cal E}_k^p(H)$;
@@ -203,8 +187,7 @@ $x \in {\cal E}_k^p(H)$;
 (4) each member of
 ${\cal E}_k^p(H)$ fixes a unique point in the permutation representation of $G$ on $G/H$.
 \begin{quote}
-\emph{Proof:}  
-Parts 2, 3, 4 are equivalent by the above result except
+\emph{Proof:}  Parts 2, 3, 4 are equivalent by the above result except
 ${\cal E}^p_k(G)$ should be
 ${\cal E}^p_k(H)$.  It remains to show 1 implies 2.
 Assume
@@ -222,15 +205,13 @@ $g= g_1 g_2 \ldots g_n \in H$ and 2 holds.
 \emph{strongly $p$-embedded in $G$}.
 \\
 \\
-{\bf Theorem:} 
-Let $P \in S_p(G)$ and suppose $P$ is $k$-connected then
+{\bf Theorem:} Let $P \in S_p(G)$ and suppose $P$ is $k$-connected then
 (1) ${\cal E}_k^p(\Gamma_{P,k}(G))$ is a connected component of
 ${\cal D}({\cal E}_k^p(G))$ and
 $\Gamma_{P,k}(G))$ is the stabiliser of that component;
 (2) $G$ is $k$-disconnected for the prime $p$ iff $G$ has a proper $k$-generated $p$-core.
 \begin{quote}
-\emph{Proof:}  
-1 implies 2.  Let $H= \Gamma_{P, k}(G)$.  By the earlier resutls,
+\emph{Proof:}  1 implies 2.  Let $H= \Gamma_{P, k}(G)$.  By the earlier resutls,
 ${\cal E}^p_k(G)$
 is a union of connected components of
 ${\cal D}({\cal E}^p_2(G))$
@@ -240,16 +221,12 @@ $P$ is $k$-connected and $H \le N_G( \Delta )$.  Hence
 ${\cal E}^p_k(H) \subseteq \Delta$ by Sylow. Thus
 $\Delta = {\cal E}^p_k(H)$ and $H= N_G( \Delta )$ and 2 holds.
 \end{quote}
-{\bf Theorem:} 
-$G$ posseses a strongly $p$-embedded subgroup iff $G$ is $1$-disconnected for the prime $p$.
+{\bf Theorem:} $G$ posseses a strongly $p$-embedded subgroup iff $G$ is $1$-disconnected for the prime $p$.
 \begin{quote}
-\emph{Proof:}  
-Follows from previous result.
+\emph{Proof:}  Follows from previous result.
 \end{quote}
-{\bf Theorem:} 
-Let $m_p(G) > 2, P \in S_p(G)$ and
-${\cal E}_k^p(G)^0$ be the set of subgroups 
-$X \in {\cal E}_k^p(G)$ with $m_p(XC_G(X)) > 2$.  Then
+{\bf Theorem:} Let $m_p(G) > 2, P \in S_p(G)$ and
+${\cal E}_k^p(G)^0$ be the set of subgroups $X \in {\cal E}_k^p(G)$ with $m_p(XC_G(X)) > 2$.  Then
 (1) ${\cal E}_k^p(G)^0$ is the set of points that are not isolated in
 ${\cal D}({\cal E}_k^p(G))$;
 (2) ${\cal E}_2^p(\Gamma_{P,2}^0(G))^0$ is a connected component of
@@ -259,8 +236,7 @@ $\Gamma_{P,2}^0(G))$ is the stabilizer of this connected component;
 ${\cal D}({\cal E}_2^p(G))^0$ is connected iff
 $G= \Gamma_{P,2}^0(G))$.
 \begin{quote}
-\emph{Proof:}  
-1 is trivial and 3 easily follows from 2.   By the previous result,
+\emph{Proof:}  1 is trivial and 3 easily follows from 2.   By the previous result,
 ${\cal E}^p_2(G)^0$ is contained in a connected component $\Delta$ of
 ${\cal D}({\cal E}^p_2(G))$.  Thus
 $H=
@@ -272,24 +248,20 @@ $Y \in \Delta \setminus \Gamma$ with $X$ and $Y$ are adjacent
 ${\cal D}( \Delta )$.   WLOG,
 $X \in {\cal E}^p_2(G)^0$, so $Y \le C_G(X) \le H$ and hence
 $m_P(C_H(Y)) \ge m_P(XY) \ge 3$, $Y \in \Gamma$, a contradiction.
-So $\Delta = \Gamma$, it remains to show that if 
-$X, X^g \in \Gamma$ then $g \in G$.
+So $\Delta = \Gamma$, it remains to show that if $X, X^g \in \Gamma$ then $g \in G$.
 Suppose
 $X, X^g \in \Gamma$ then $N_G(X) \le H \ge N_G(X^g )$ so there is a
 $E_{p^3} \cong A \le C_G(X) \le H$ and $A^g \le H$.  So by Sylow take $A$,
-$A^g \le P$.  Now apply Alperin, using 
-$ \Gamma_{P, 3}(G) \le \Gamma_{P, 2}(G)^0 \le H $ to conclude $g \in H$.
+$A^g \le P$.  Now apply Alperin, using $ \Gamma_{P, 3}(G) \le \Gamma_{P, 2}(G)^0 \le H $ to conclude $g \in H$.
 \end{quote}
-{\bf Theorem:} 
-Let $\Gamma$ be the elements $a \in G$ of order $p$ with $m_p(C_G(a)) > 2$ and
+{\bf Theorem:} Let $\Gamma$ be the elements $a \in G$ of order $p$ with $m_p(C_G(a)) > 2$ and
 $\theta: \Gamma \rightarrow p'(G)$ such that $\forall a,b \in \Gamma, [a,b]=1$ and
 all $g \in G: \theta(a^g)=\theta(a)^g$ and $\theta(a) \cap C_G(b) \le \theta(b)$.
 Let $P \in S_p(G)$ and assume $G=\Gamma_{P,2}(G)$ and $O_{p'}(G)=1$ and finally assume
 that either $\theta(a)$ is solvable for each $a \in \Gamma$ or the Signalizer Functor Theorem
 holds on $G$ then $\theta(a)=1, \forall a \in \Gamma$.
 \begin{quote}
-\emph{Proof:}  
-For $A \in {\cal E}^p_3(G)$, $\theta$ is an $A$-signalizer functor.  For
+\emph{Proof:}  For $A \in {\cal E}^p_3(G)$, $\theta$ is an $A$-signalizer functor.  For
 $B \in {\cal E}^p_2(G)$, define $W_B= \langle \theta(b): b \in B^{\#} \rangle$.  Then
 $\exists A \in {\cal E}^p_3(G)$ with $B \le A$ and hence $W_B = W_A$ and
 $\Gamma_{A,2}(G) \le N_G(W_A)$.  In particular, if $B, D$ are distinct members of
@@ -298,24 +270,20 @@ ${\cal D}({\cal E}^p_2(G))$ , $BD \in
 {\cal E}^p_2(G)$ so $W_B = W_{BD} = W_D$.  Thus
 $G = \Gamma^0_{P, k}(G) \le N_G(W)$ since
 $N_G(B) \le \Gamma_{A,2}(G) \le N_G(W)$.  But by 1 and the solvable signalizer functor theorem,
-$W$ is a $p'$ group so $W \le O_{p'}(G)$.  
-Since $O_{p'}(G) = 1$ and $\theta(a) \le W, \forall a \in \Gamma$, the lemma is proved.
+$W$ is a $p'$ group so $W \le O_{p'}(G)$.  Since $O_{p'}(G) = 1$ and $\theta(a) \le W, \forall a \in \Gamma$, the lemma is proved.
 \end{quote}
-{\bf Theorem:} 
-Let $\Gamma$ be the elements $a \in G$ of order $p$ with $m_p(C_G(a)) > 2$ and
+{\bf Theorem:} Let $\Gamma$ be the elements $a \in G$ of order $p$ with $m_p(C_G(a)) > 2$ and
 $P \in S_p(G)$ and assume $G=\Gamma_{P,2}(G)$ and $O_{p'}(G)=1$, $C_G(a)$ is balenced
 for the prime $p$ and for each $a \in \Gamma$ either
 $O_{p'}(C_G(a))$ is solvable or the Signalizer Functor Theorem holds on $G$ then
 $O_{p'}(C_G(a))=1, \forall a \in \Gamma$.
 \begin{quote}
-\emph{Proof:}  
-For $a \in \Gamma$, let $\theta(a)= O_{p'}(C_G(a))$ and we know
+\emph{Proof:}  For $a \in \Gamma$, let $\theta(a)= O_{p'}(C_G(a))$ and we know
 $\theta(a) \cap C_G(b) \le \theta(b), \forall a, b \in \Gamma$ with $[a,b]= 1$ and applying the
 previous result, we're done.
 \end{quote}
 \section{Aschbacher's Plan}
-{\bf Definition:} 
-$m_{2,p}(G)= max_H \{ m_p(H) \}$, where $H$ is a $2$-local of $G$.
+{\bf Definition:} $m_{2,p}(G)= max_H \{ m_p(H) \}$, where $H$ is a $2$-local of $G$.
 $e(G)= max \{m_{2,p}(G) \}, p$ odd.
 \\
 \\
@@ -323,21 +291,17 @@ $e(G)= max \{m_{2,p}(G) \}, p$ odd.
 $O_{p', E}(G)/O_{p'}(G)= E(G/O_{p'}(G))$.
 \\
 \\
-{\bf Theorem:} $P \in p(G)$ then 
-(1) $O_{p', E}(N_G(P)) \le C_G(O_p(G))$ and
+{\bf Theorem:} $P \in p(G)$ then (1) $O_{p', E}(N_G(P)) \le C_G(O_p(G))$ and
 (2) if $P \le O_p(G)$ then $O^p(F^*(N_G(P))= O^p(F^*(G))$.
 \begin{quote}
-\emph{Proof:}  
-Todo.
+\emph{Proof:}  Todo.
 \end{quote}
-{\bf Definition:} 
-$G$ is \emph{balenced} for $p$, prime if $O_{p'}(C_G(X)) \le O_{p'}(G), \forall X < G: |X|=p$.
+{\bf Definition:} $G$ is \emph{balenced} for $p$, prime if $O_{p'}(C_G(X)) \le O_{p'}(G), \forall X < G: |X|=p$.
 $m_{2,p}(G)= max_H \{ m_p(H) \}$, where $H$ is a $2$-local of $G$.
 $e(G)= max \{m_{2,p}(G) \}, p$ odd.
 \\
 \\
-{\bf Theorem:} Let $O_{p'}(G)=1$ and $Aut_H(L)$ is balenced for the prime $p$ 
-for each $L \in Comp(G)$ and for each $L \in Comp(G)$ and each $H \le G$ with $L \lhd H$
+{\bf Theorem:} Let $O_{p'}(G)=1$ and $Aut_H(L)$ is balenced for the prime $p$ for each $L \in Comp(G)$ and for each $L \in Comp(G)$ and each $H \le G$ with $L \lhd H$
 then $G$ is balenced for the prime $p$.
 \begin{quote}
 \end{quote}
@@ -377,8 +341,7 @@ order $p$ in $G$ then $O_{p',E}(C_G(x))= O_{p'}(C_G(x))E(C_G(x))$.
 \\
 \\
 {\bf Unbalenced Group Theorem:} If $G$ is a group with $F^*(G)$, simple which is unbalenced for
-the prime $2$, then $F^*(G)$ is a group of Lie type and odd characteristic $A_{2n+1}$, 
-$L_3(4)$ or $He$.
+the prime $2$, then $F^*(G)$ is a group of Lie type and odd characteristic $A_{2n+1}$, $L_3(4)$ or $He$.
 \\
 \\
 {\bf Component Theorem:} Let $G$ be a group with $F^*(G)$ simple satisfying the $B_2$ property
@@ -386,16 +349,14 @@ and possessing an involutions, $t$, such that $O_{2',E}(C_G(t)) \ne O_{2'}(C_G(t
 $G$ posseses a standard subgroup for the prime $2$.
 \\
 \\
-{\bf Standard Form Problem for $(L,r)$:}   Determine all finite groups $G$ possessing a 
-standard subgroup $H$ for the prime $r$: $E(H) \cong L$.
+{\bf Standard Form Problem for $(L,r)$:}   Determine all finite groups $G$ possessing a standard subgroup $H$ for the prime $r$: $E(H) \cong L$.
 \\
 \\
 {\bf Theorem:} Let $G$ be a minimal counterexample to the classification theorem and assume $G$
 is generic of even characteristic then one of the following holds:
 (1) $G$ possesses a standard subgroup  for some $p \in \sigma(G)$,
 (2) there is a symplectic involution, $t$, such that $F^*(C_G(t))$ is a $2$-group
-of symplectic type or 
-(3) $G$ is in the uniqueness case.
+of symplectic type or (3) $G$ is in the uniqueness case.
 \\
 \\
 {\bf Aschbacher:} Suppose $G$ is a finite simple group, the $B$-Theorem holds, and $E(C_G(t)) \neq 1$
@@ -411,39 +372,29 @@ form with standard component $L$.
 J.G. Thompson proved that Frobenius kernels are nilpotent.
 It is enough to prove that a finite group which admits a fixed-point free automorphism $\alpha$
 of prime order $p$ is nilpotent, which Thompson did in his thesis.
-Before Thompson's, it was known that a finite solvable group which admits a fixed-point free automorphism 
-of prime order is nilpotent. This was proved by G. Higman and J. Witt.
+Before Thompson's, it was known that a finite solvable group which admits a fixed-point free automorphism of prime order is nilpotent. This was proved by G. Higman and J. Witt.
 Here is a quick outline, making use of the more modern version of the normal $p$-complement theorems
 (and standard properties of coprime automorphisms).\\
 \\
 \\
-{\bf Theorem 1:}  Let $G$ be a finite group which admits a fixed-point-free automorphism 
-$\alpha$ of prime order $p$ such that $G$ is not nilpotent, 
-and let $G$  have minimal order subject to this. Then $|G|=1 \jmod{p}$.
+{\bf Theorem 1:}  Let $G$ be a finite group which admits a fixed-point-free automorphism $\alpha$ of prime order $p$ such that $G$ is not nilpotent, and let $G$  have minimal order subject to this. Then $|G|=1 \jmod{p}$.
 \begin{quote}
 \emph{Proof:}
-We may assume that $G$ is not solvable. Hence we may choose an 
-odd prime divisor $q$ of $|G|$.
+We may assume that $G$ is not solvable. Hence we may choose an odd prime divisor $q$ of $|G|$.
 Then $G$ has an $\alpha$-invariant Sylow $q$-subgroup $Q$, and $N(Z(J(Q)))$
 is also $\alpha$-invariant.
 
-If $Z(J(Q)) \lhd G$ then $\alpha$ induces a fixed-point free automorphism on 
-$G/Z(J(Q))$ so, by induction, $G/Z(J(Q))$ is nilpotent,
+If $Z(J(Q)) \lhd G$ then $\alpha$ induces a fixed-point free automorphism on $G/Z(J(Q))$ so, by induction, $G/Z(J(Q))$ is nilpotent,
 and $G$ is solvable, contrary to assumption.  Hence $N(Z(J(Q)))$
 is a proper subgroup of $G$, which is nilpotent by the minimality of $G$.
 The Thompson's normal $q$-complement theorem shows that $G$ has a normal $q$-complement too.
-Since $q$ was an arbitrary odd prime divisor of $|G|$, $G$ has a normal Sylow 2-subgroup $U$ and 
-$G/U$ is nilpotent by minimality of $G$. So $G$ is again solvable, contrary to assumption.
+Since $q$ was an arbitrary odd prime divisor of $|G|$, $G$ has a normal Sylow 2-subgroup $U$ and $G/U$ is nilpotent by minimality of $G$. So $G$ is again solvable, contrary to assumption.
 \\
 This now reduces to proving the result in the case that $G$ is solvable which
-reduces to representation theory. 
-Further reducing to the case that $Q=F(G)$ is a minimal normal subgroup of $G$. This means $Q$ is 
-an elementary Abelian $q$-group for some prime $q$. 
-Furthermore, $G/M$ is an elementary Abelian $r$-group for some prime $r$.
+reduces to representation theory. Further reducing to the case that $Q=F(G)$ is a minimal normal subgroup of $G$. This means $Q$ is an elementary Abelian $q$-group for some prime $q$. Furthermore, $G/M$ is an elementary Abelian $r$-group for some prime $r$.
 Let $R$ be an $\alpha$-invariant Sylow $r$-subgroup of $G$.
 Consider the semi-direct product $H=G \langle \alpha \rangle= Q R \langle \alpha \rangle$.
-$R\langle \alpha \rangle$ is a Frobenius group of order $p|R|$, and 
-acts faithfully as a group of automorphisms of $Q$.
+$R\langle \alpha \rangle$ is a Frobenius group of order $p|R|$, and acts faithfully as a group of automorphisms of $Q$.
 Now by Clifford's theorem,
 $\alpha$ can't act without non-trivial fixed-points on $Q$, contrary to the assumption that it does.
 \end{quote}
@@ -489,8 +440,7 @@ $P \cap Q \ne 1$  Then $P=Q$.
 $P \subseteq N(P)'$.
 \begin{quote}
 \end{quote}
-From Theorem 1, it is clear the minimal counterexample cant be a $3$-step group which gives 14.2.2 
-in Gorenstein.  With these two theorems, we can use $N_G(P)$ in place of $N_G(Z(J(P)))$ in 14.2.3.
+From Theorem 1, it is clear the minimal counterexample cant be a $3$-step group which gives 14.2.2 in Gorenstein.  With these two theorems, we can use $N_G(P)$ in place of $N_G(Z(J(P)))$ in 14.2.3.
 \section{Some Bender Results}
 {\bf Theorem 3:} Suppose $G$ is a group in which every normalizer of a $p$ subgroup is $p$-constrained.
 If $p=2$ assume $cl(P) \leq 2$, $P \in S_p(G)$.  Let $E$ be an abelian $p$ groups with $r(E) \geq 3$ such that
@@ -498,8 +448,7 @@ $E$ contains every $p$-element of $C_G(E)$.  Then $O_{p'}(C_G(E))$ acts transiti
 $p \ne q$.
 \\
 \\
-{\bf Definition:} $S \in S_2(G), S' = 1$ is an $A^*$ group if there is a normal series 
-$1 \subseteq N \subseteq M \subseteq G$ where $N$ and $G/M$ have odd order and $M/N$
+{\bf Definition:} $S \in S_2(G), S' = 1$ is an $A^*$ group if there is a normal series $1 \subseteq N \subseteq M \subseteq G$ where $N$ and $G/M$ have odd order and $M/N$
 is a direct product of $2$-group and $L_2(q)$ or $JR$.
 \\
 \\
@@ -543,8 +492,7 @@ the minimal polynomial is $x-1$.
 If $C_G(C) \subseteq C$ then $[A, G]=1$.
 \begin{quote}
 \emph{Proof:}
-Take $x \in N_G(C), y \in C$.  $(x^{-1}yx)^a = x^{-1}yx$ and $x^ax^{-1}$ centralized $y$. 
-So $x^ax^{-1} \in C_G(C) \subseteq C$.  Thus $A$ centralizes $N_G(C)/C$ stabilizing
+Take $x \in N_G(C), y \in C$.  $(x^{-1}yx)^a = x^{-1}yx$ and $x^ax^{-1}$ centralized $y$. So $x^ax^{-1} \in C_G(C) \subseteq C$.  Thus $A$ centralizes $N_G(C)/C$ stabilizing
 $1 \subseteq C \subseteq N_G(C)$ and $A$ acts trivially in $N_G(C)$.  Thus $N_G(C) \subseteq C$.
 Since $G$ is nilpotent, $G=C$ and $A$ acts trivially on $G$.
 \end{quote}
