--- a/groups/gtComponent.tex
+++ b/groups/gtComponent.tex
@@ -13,19 +13,16 @@
 $p$-group.
 \\
 \\
-{\bf Theorem 4:} If 
-$A \lhd \lhd G$ and $B \lhd \lhd G$ then $ \langle A, B \rangle \lhd \lhd G$. 
+{\bf Theorem 4:} If
+$A \lhd \lhd G$ and $B \lhd \lhd G$ then $ \langle A, B \rangle \lhd \lhd G$.
 \begin{quote}
-\emph{Proof:}  
-The proof is by induction on $|G|$.  We have:
+\emph{Proof:}  The proof is by induction on $|G|$.  We have:
 $A=A_1 \lhd A_2 \lhd \ldots \lhd A_n \lhd G$
 and
-$B=B_1 \lhd B_2 \lhd \ldots \lhd B_m \lhd G$.  
-$A_n B_m \lhd G$.  If
+$B=B_1 \lhd B_2 \lhd \ldots \lhd B_m \lhd G$.  $A_n B_m \lhd G$.  If
 $A_n B_m < G$.  $ \langle A, B \rangle \lhd \lhd \langle A_n , B_m \rangle \lhd G$
 where the subnormality in the product group follows by induction and the result follows.
-If $ \langle A, B \rangle = G$ the result is trivial.  Let $B_l$ be the first 
-subgroup in the subnormal
+If $ \langle A, B \rangle = G$ the result is trivial.  Let $B_l$ be the first subgroup in the subnormal
 sequence for $B$ in $G$: $B_lA_n=G$.  The $N=B_{l-1}A_n \lhd B_l A_m =G$.
 $ \langle A,B \rangle \lhd N \lhd G$ and the result follows.
 \end{quote}
@@ -35,32 +32,25 @@ $\Sigma^G=\Sigma$ and $\exists \Sigma: \Sigma > \Sigma_0$ then
 $\exists X \in \Sigma \setminus \Sigma_0$ such that $\Sigma_0^X=\Sigma_0$.
 \begin{quote}
 \emph{Proof:}
-By the previous result $ \langle \Sigma_0 \rangle \lhd \lhd G$.  
-Assume $ \langle \Sigma_0 \rangle \ne G$ then 
-$\exists G_1 \lhd G: \langle \Sigma_0 \rangle \subseteq G_1$, hence the induction claim applies to
+By the previous result $ \langle \Sigma_0 \rangle \lhd \lhd G$.  Assume $ \langle \Sigma_0 \rangle \ne G$ then $\exists G_1 \lhd G: \langle \Sigma_0 \rangle \subseteq G_1$, hence the induction claim applies to
 $G_1$ provided $\Sigma_1 = \{ U: U \le G_1 \} \ne \Sigma_0$.  We can assume
 $\Sigma_1= \Sigma_0$.  Then $\Sigma_1^G = \Sigma_1$, $G_1^G = G_1$ and $\Sigma_G = \Sigma$ and
 so $ \langle \Sigma_0 \rangle = \langle \Sigma_1 \rangle \lhd G$.
 \end{quote}
 {\bf Theorem 6:}
 Let $A < G$ and ${\cal U}$ be a collection of non-empty subsets of $G$
-For $U \in {\cal U}$, $\emptyset \ne 
-\Sigma_U:
+For $U \in {\cal U}$, $\emptyset \ne \Sigma_U:
 \Sigma_U = \{ A^g : g \in G, A^g \lhd \lhd U \}$.  Suppose that $\forall U, \tilde{U} \in {\cal U}$
-such that (1) $A \in \Sigma_U$, 
-(2) $\{ B: B \in \Sigma{\tilde{U}} : B \le U \} \subseteq \Sigma_U$,
+such that (1) $A \in \Sigma_U$, (2) $\{ B: B \in \Sigma{\tilde{U}} : B \le U \} \subseteq \Sigma_U$,
 (3) $\exists \hat{U} \in {\cal U}: N_G( \langle \Sigma_U \cap \Sigma{\tilde{U}} \rangle)$
 then ${\cal U}$ contains a unique maximal element.
 \begin{quote}
 \emph{Proof:}
 Set $\Sigma= \bigcup_{U \in {\cal U}} \Sigma_U, U \in {\cal U}$.  Assume $U_1 \ne U_2$
 are two maximal elements of ${\cal U}$ and $\Sigma_0 = \Sigma_{U_1} \cap \Sigma_{U_2}$
-is maximal.  According to (3), 
-$N_G( \langle \Sigma_0 \rangle) \subseteq U_3^{max}, <\Sigma_{U_i} \lhd U_i$
+is maximal.  According to (3), $N_G( \langle \Sigma_0 \rangle) \subseteq U_3^{max}, <\Sigma_{U_i} \lhd U_i$
 and the maximality of $U_i$ gives $U_i= N_G( \langle \Sigma_{U_i} \rangle)$.
-Suppose $\Sigma_0 \subseteq \Sigma_{U_i}$.  By the previous result, 
-$\exists X \in \Sigma_{U_i} \setminus \Sigma_0$ 
-with $ \langle \Sigma_0 \rangle^X = \langle \Sigma_0 \rangle $.  So
+Suppose $\Sigma_0 \subseteq \Sigma_{U_i}$.  By the previous result, $\exists X \in \Sigma_{U_i} \setminus \Sigma_0$ with $ \langle \Sigma_0 \rangle^X = \langle \Sigma_0 \rangle $.  So
 $X \in \Sigma_{U_3}$ and $\Sigma_0 \subset \Sigma_{U_3} \cap \Sigma_{U_i}$ and
 $U_2 \ne U_1 = U_3$.  Then $\Sigma_0 = \Sigma_{U_1}$ and since
 $U_i= N_G( \langle \Sigma_{U_i} \rangle)$,
@@ -71,47 +61,35 @@ If $A \lhd \lhd \langle A,A^g \rangle , \forall g \in G$ then $A \lhd \lhd G$.
 \begin{quote}
 \emph{Proof:}
 $A \lhd \lhd \langle A , A^{gx^{-1}} \rangle $ so
-$A^x \lhd \lhd \langle A^x , A^{g} \rangle $.  
-Proceed by induction on $|G|$ and assume $A$ is not
+$A^x \lhd \lhd \langle A^x , A^{g} \rangle $.  Proceed by induction on $|G|$ and assume $A$ is not
 subnormal in $G$.  Let ${\cal U}$ be the proper subgroups of $G$ containing $A$.
 $ \langle A, A^g \rangle \in {\cal U}, \forall g \in G$.  By induction,
 $\Sigma_U= \{ A^x: A^x \le U, x \in G \} \lhd \lhd U$.  $\Sigma_0 \subseteq \Sigma_U$
 and $A \in \Sigma_0$, $A \lhd \lhd \langle \Sigma_0 \rangle $.  So
-$ \langle \Sigma_0 \rangle $ is not normal in $G$ and 
-$N_G( \langle \Sigma_0 \rangle) \in {\cal U}$ and ${\cal U}$
+$ \langle \Sigma_0 \rangle $ is not normal in $G$ and $N_G( \langle \Sigma_0 \rangle) \in {\cal U}$ and ${\cal U}$
 satisfies the hypothesis of the previous theorem.  Let $M$ be the unique maximal subgroup.
-that contains 
-$ \langle A, A^g \rangle , \forall g \in G$.  $A \lhd \lhd , \langle \Sigma_M \rangle \lhd G$ and
+that contains $ \langle A, A^g \rangle , \forall g \in G$.  $A \lhd \lhd , \langle \Sigma_M \rangle \lhd G$ and
 thus $A \lhd \lhd G$.
 \end{quote}
 \section {Basic Results and definitions}
 {\bf Generalized Fitting Subgroup Motivation:}
-Since $C(F^*(G)) \subseteq F^*(G)$, $G \rightarrow Aut(G)$ has kernel $Z(F^* (G))$; 
-further, $F^*(G)$ is uncomplicated and its embedding in $G$ is well behaved.  
-Want to study relationship
+Since $C(F^*(G)) \subseteq F^*(G)$, $G \rightarrow Aut(G)$ has kernel $Z(F^* (G))$; further, $F^*(G)$ is uncomplicated and its embedding in $G$ is well behaved.  Want to study relationship
 of $F^*(G)$ and its $p-$locals.  Hard when $F^*(G)$ is a $p-group$ but then we
-can use Thompson factorization.  
+can use Thompson factorization.  \\
 \\
+{\bf Definition:} $L$ is \emph{quasi-simple} if $L'=L$ and $L/Z(L)$ is simple.  \\
 \\
-{\bf Definition:} 
-$L$ is \emph{quasi-simple} if $L'=L$ and $L/Z(L)$ is simple.  
-\\
-\\
-{\bf Definition:} 
-$L$ is a \emph{ component} of $H$ if
+{\bf Definition:} $L$ is a \emph{ component} of $H$ if
 $L \lhd \lhd H$ and $L$ is quasi-simple.
 \\
 \\
-{\bf Definition:} 
-$Comp(G)= \{H: H$ is a component of $G \}$.
+{\bf Definition:} $Comp(G)= \{H: H$ is a component of $G \}$.
 \\
 \\
-{\bf Definition:} 
-$E(G)= \langle Comp(G) \rangle $ where $H$ is a component of $G$.  $E(G) \lhd G$.
+{\bf Definition:} $E(G)= \langle Comp(G) \rangle $ where $H$ is a component of $G$.  $E(G) \lhd G$.
 \\
 \\
-{\bf Definition:} 
-$F^*(G)=F(G)E(G)$ is called the \emph{Generalized Fitting Group}.
+{\bf Definition:} $F^*(G)=F(G)E(G)$ is called the \emph{Generalized Fitting Group}.
 \\
 \\
 {\bf Theorem 8:} Let $H \lhd \lhd G$ then $Comp(H)= Comp(G) \cap H$.
@@ -124,9 +102,7 @@ $L \lhd \lhd G$ and $L \in Comp(G) \cap H$, $L \lhd \lhd H$ and the result follo
 $[L,H]= 1$.
 \begin{quote}
 \emph{Proof:}
-If $L \notin Comp(H)$, $L \cap H < L$ and $L \ne [L, H] \lhd L$, so 
-$[L,H] \subseteq {\mathbb Z}(L)$.  $[L,H,L]=1= [H,L,L]$ so $[L, L, H]= [L, H]=1$ by 
-the three subgroups lemma.
+If $L \notin Comp(H)$, $L \cap H < L$ and $L \ne [L, H] \lhd L$, so $[L,H] \subseteq {\mathbb Z}(L)$.  $[L,H,L]=1= [H,L,L]$ so $[L, L, H]= [L, H]=1$ by the three subgroups lemma.
 \end{quote}
 {\bf Theorem 10:} Distinct components commute.
 \begin{quote}
@@ -142,14 +118,12 @@ $[L_2, L_1, L_2] =1$ so $[L_2, L_2, L_1]= [L_2, L_1]=1$.
 \begin{quote}
 \emph{Proof:}
 $H \lhd \langle H, L \rangle$.  If $L \subseteq H$, $L \in Comp(H)$, otherwise,
-$[L, H] = 1$ by the earlier result.  If $H$ is solvable, it cannot have a simple 
-non-abelian subgroup, $L$ so $L \notin Comp(H)$.
+$[L, H] = 1$ by the earlier result.  If $H$ is solvable, it cannot have a simple non-abelian subgroup, $L$ so $L \notin Comp(H)$.
 \end{quote}
 {\bf Lemma:} If $K_1$ and $K_2$ are components either $K_1= K_2$ or $[K_1, K_2 ] = 1$.
 \begin{quote}
 \emph{Proof:}
-By previous result, if $[K_1 , K_2] \ne 1$, 
-$K_1 \le K_2$ symmetrically,
+By previous result, if $[K_1 , K_2] \ne 1$, $K_1 \le K_2$ symmetrically,
 $K_1 \ge K_2$ and $K_1 = K_2$,
 \end{quote}
 {\bf Theorem 12:} Let $E=E(G)$, $Z={\mathbb Z}(E)$, ${\overline E}= E/Z$.  Then
@@ -158,8 +132,7 @@ $K_1 \ge K_2$ and $K_1 = K_2$,
 (3) $E$ is a central product of its components.
 \begin{quote}
 \emph{Proof:}
-$Z_0 = \prod_{i=1}^n Z_i$.  $E(G)= \prod_{i=0}^n (Z_0 K_i)$.  
-$K_i Z_0 \cap \prod_{i \ne j} K_j Z_0 = Z_0$.
+$Z_0 = \prod_{i=1}^n Z_i$.  $E(G)= \prod_{i=0}^n (Z_0 K_i)$.  $K_i Z_0 \cap \prod_{i \ne j} K_j Z_0 = Z_0$.
 \end{quote}
 {\bf Theorem 13:} $O_{\infty}(C_G(F(G)))= {\mathbb Z}(F(G))$.
 \begin{quote}
@@ -179,8 +152,7 @@ of ${\overline H}$ is the direct product ofnonabelian simple subgroups and these
 components of ${\overline H}$.  So ${\overline S} \le E({\overline H})$.
 Let ${\overline K}$ be a component of ${\overline H}$.  So $K= K^{(1)}Z$ with
 $K^{(1)}$ quasisimple.  $K \in Comp(G)$ so
-$S \le E(G)Z$ and $S \le E(G)Z$, thus $E(G) \le H$.  
-Let $L \in Comp(G)$ and $M= \langle L^H \rangle $
+$S \le E(G)Z$ and $S \le E(G)Z$, thus $E(G) \le H$.  Let $L \in Comp(G)$ and $M= \langle L^H \rangle $
 then ${\overline M}$ is a minimal normal simple subgroup of ${\overline H}$ so
 $M \le S$.  Thus $S=E(G)Z$ so $E(G)=S^{(1)}$.
 \end{quote}
@@ -199,8 +171,7 @@ a contradiction.
 $O_{p', E}(G)/O_{p'}(G)= E(G/O_{p'}(G))$.
 \\
 \\
-{\bf Theorem 16:} $P \in p(G)$ then 
-(1) $O_{p', E}(N_G(P)) \le C_G(O_p(G))$ and
+{\bf Theorem 16:} $P \in p(G)$ then (1) $O_{p', E}(N_G(P)) \le C_G(O_p(G))$ and
 (2) if $P \le O_p(G)$ then $O^p(F^*(N_G(P))= O^p(F^*(G))$.
 \begin{quote}
 \emph{Proof:}
@@ -219,14 +190,12 @@ Let $Y=X'$ and $X^*= X/Z(X)$.  $Y^* \lhd X^*$ and $X^*$ is simple so $Y^*=1$ or
 $Y^*=X^*$.  In the latter case, $X=YZ(X)$ and in the former $X^*$ is abelian which is a contradiction.
 So $X=Y Z(X)$ and $X/Y'$ is abelian thus $Y=Y'$.  Further, $Y/Z(Y)= X^*$ is simple so $Y^*$ is quasi-simple.
 \end{quote}
-{\bf Definition:} $G$ is of 
-\emph{ characteristic $p-$type}
+{\bf Definition:} $G$ is of \emph{ characteristic $p-$type}
 if  $F^*(H)=O_p(H)$ for every $p-$local, $H$ (Groups of Lie type over characteristic
 $p$ are, for example).
 \\
 \\
-{\bf Theorem 19:} $E(G)= \langle K | K$ is a component of $G \rangle $.  
-$F^*(G) F(G)E(G)$, $[F(G), E(G)]=1$.
+{\bf Theorem 19:} $E(G)= \langle K | K$ is a component of $G \rangle $.  $F^*(G) F(G)E(G)$, $[F(G), E(G)]=1$.
 $F^*(G)$ contains every minimal subgroup of $G$; in particular, $ \langle K^G \rangle $ is the
 direct product of components conjugate to $K$.
 \begin{quote}
@@ -240,15 +209,13 @@ $Z= Z_1 Z_2 \ldots Z_n$.  $E(G)/Z= E_1 \times E_2 \times \ldots \times E_n$.
 \emph{Proof:}
 See section on components.
 \end{quote}
-{\bf Theorem 21:}  Let $L \lhd \lhd G$ then 
-(1) if $L \le F^*(G)$ then $L= (L \cap F(G)) (L \cap E(G))$,
+{\bf Theorem 21:}  Let $L \lhd \lhd G$ then (1) if $L \le F^*(G)$ then $L= (L \cap F(G)) (L \cap E(G))$,
 (2) $F^*(L) = F^*(G) \cap L$,
 (3) $E(L) C_{E(G)}(L) =E(G)$, $E(L) \lhd E(G)$.
 \section {Characteristic $p-$type}
 {\bf Definition:}
 $G$ is of characteristic $p-$type if $P \in p(G), N= N_G(P) \rightarrow F^*(N)=O_p(N)$.
-$PSL_n(p^m)$ is of characteristic $p-$type.  
-\\
+$PSL_n(p^m)$ is of characteristic $p-$type.  \\
 \\
 {\bf Theorem 22:} Let $G$ be a non-abelian simple group,
 $G$ is of characteristic $p-$type iff $F^*(N(P))= O_p(N(P))$ for every maximal $p-$local.
@@ -257,8 +224,7 @@ If $F^*(G)$ is a $p-$group then so is $F^*(N(P)), \forall P \in p(G)$ (use $P \t
 \end{quote}
 {\bf Definition:}
 Let $\Omega$ be a collection of subgroups.  Define ${\cal D} (\Omega)$ as the graph
-formed by joining $A,B \in \Omega$ if $[A,B]=1$. If $k > 0$ let, 
-${\cal E}^p_k (G)$
+formed by joining $A,B \in \Omega$ if $[A,B]=1$. If $k > 0$ let, ${\cal E}^p_k (G)$
 be the elementary abelian subgroups of $p$-rank at least $k$. $G$ is said to be
 $k-connected$ for prime $p$ if ${\cal D} ( {\cal E}^p_k (G))$
 is connected.
@@ -272,8 +238,7 @@ $G \cong L_2(q)$,
 $G \cong L_3(q)$,
 $G \cong U_3(q)$ $q$, odd, or $M_{11}$; or,  (2)
 $G \cong U_3(4)$.
-Note that $Q_8 \in S_2(SL_2(3))$ and 
-$\left(
+Note that $Q_8 \in S_2(SL_2(3))$ and $\left(
 \begin{array}{cc}
 2 &  0 \\
 0 &  2 \\
@@ -298,12 +263,9 @@ $X$ is $p$-constrained iff $E(X)=1$ or, equivalently, $C_X(O_p(X)) \le O_p(X)$.
 \begin{quote}
 \end{quote}
 {\bf Definition:}
-Let ${\overline X}= E(X/O_{p'}(X))$, 
-$L$ is a minimal normal subgroup subject to ${\overline L}= E({\overline X})$,
+Let ${\overline X}= E(X/O_{p'}(X))$, $L$ is a minimal normal subgroup subject to ${\overline L}= E({\overline X})$,
 ${\overline {L_i}}$ is a component of $E({\overline X})$, $L_i= O^{p'}(L_i)$,
-$[L_i, L_i]= L_i$ and $[L_i, L_j] \le O_{p'}(X)$, 
-$L$ is called the \emph{ $p$-layer}. 
-\\
+$[L_i, L_i]= L_i$ and $[L_i, L_j] \le O_{p'}(X)$, $L$ is called the \emph{ $p$-layer}. \\
 \\
 {\bf Theorem 25:}
 $F^*(X)$ controls embedding of $X$ of
@@ -332,8 +294,7 @@ $SL_2(2^n), SZ(2^n), PSU_3(2^n)$.
 No simple group of
 $p-rank \ge 3$ has a strongly $2-$embedded $2'$ local subgroup.\\
 \\
-{\bf Bender's Theorem:} 
-Let $G$ be a finite simple group and $S \in S_2(G)$ then one of the following holds:
+{\bf Bender's Theorem:} Let $G$ be a finite simple group and $S \in S_2(G)$ then one of the following holds:
 (a) $S$ is dihedral, (b) $S$ is semidihedral, (c) $G$ has a strongly embedded subgroup,
 (d) $S$ has a non-cyclic characteristic elementary abelian subgroup, $A$, and
 $E=N_G(A)$ has conjugacy classes, $ \langle z_i^G \rangle $, that do not fuse in $G$ such that
@@ -366,8 +327,7 @@ $H$.
 {\bf B-Theorem:} $L_{2'}(C_G(z)) = E(C_G(z))$.
 \\
 \\
-{\bf Bender:} $H/Z(F(H))$ acts faithfully as a group of automorphisms of $F^*(H)$ and, 
-in particular $|H| \leq |F^*(H)|!$.
+{\bf Bender:} $H/Z(F(H))$ acts faithfully as a group of automorphisms of $F^*(H)$ and, in particular $|H| \leq |F^*(H)|!$.
 
 \begin{quote}
 \emph{Proof:} Follows from properties of $F^*(G)$.
@@ -375,8 +335,7 @@ in particular $|H| \leq |F^*(H)|!$.
 
 {\bf Problem} Suppose that $G$ is a finite group containing an involution $t$ such that
 $C_G(t) = \langle t \rangle \times L$, with $L \cong  S_n$, $n \ge  5$. Suppose
-further that if $t_i$ is a transposition in $L$, 
-then $C_G(t_i) = \langle t_i \rangle \times L_i \cong  C_G(t)$. Prove
+further that if $t_i$ is a transposition in $L$, then $C_G(t_i) = \langle t_i \rangle \times L_i \cong  C_G(t)$. Prove
 that $G \cong  S_{n+2}$.
 \\
 \\
@@ -393,8 +352,7 @@ subgroups of $T$. If $C(G, T) < G$, then $C(G, T)$ is a strongly embedded subgro
 $G$ and so $G \cong  SL(2, 2n), Sz(2n), PSU(3, 2n)$.
 \\
 \\
-{\bf Gorenstein-Lyons Trichotomy Theorem} Let $G$ be a simple group of 
-characteristic $2$-type with $e(G) \ge  4$ in which all proper subgroups have known simple
+{\bf Gorenstein-Lyons Trichotomy Theorem} Let $G$ be a simple group of characteristic $2$-type with $e(G) \ge  4$ in which all proper subgroups have known simple
 composition factors. Then one of the following alternatives holds:
 \\
 1. There is an odd prime $p$ and an element $x$ of $G$ of order $p$ such that $C_G(x)$
@@ -407,11 +365,9 @@ some odd prime $p$ such that $M$ has $p$-rank at least $4$; or
 3. $G$ is of $GF(2)$-type.
 \\
 \\
-{\bf The Feit-Thompson Uniqueness Theorem} Let $G$ be a finite group of odd order in which 
-every proper subgroup is solvable. Suppose that $K$ is a proper subgroup
+{\bf The Feit-Thompson Uniqueness Theorem} Let $G$ be a finite group of odd order in which every proper subgroup is solvable. Suppose that $K$ is a proper subgroup
 of $G$ such that either $r(K) \geq 3$ or $r(C_G(K)) \ge 3$. Then $K$ is contained in a unique
-maximal subgroup of $G$. (Here $r(K)$ denotes the maximum rank of an abelian $p$-subgroup of 
-$K$, as $p$ ranges over all prime divisors of $|K|$.)
+maximal subgroup of $G$. (Here $r(K)$ denotes the maximum rank of an abelian $p$-subgroup of $K$, as $p$ ranges over all prime divisors of $|K|$.)
 \\
 \\
 {\bf Theorem 27:} Let $G$ be $2$-transitive on $\Omega$, $|\Omega| = 1 \jmod{2}$ and for
