--- a/groups/gtInvolutions.tex
+++ b/groups/gtInvolutions.tex
@@ -200,7 +200,7 @@ $\ge 16$.
 \begin{quote}
 \emph{Proof:}  
 $G$ has a critical subgroup $H$, $U= {\mathbb H}$, let $Z$ be a cyclic subgroup of $U$ of order $p$.
-$G^*= G/Z$.  Put $K^* = \Omega_1(H^*)$ and let $E^*$ be the complement to ${mathbb Z}(K)^*$ in $K^*$.
+$G^*= G/Z$.  Put $K^* = \Omega_1(H^*)$ and let $E^*$ be the complement to ${\mathbb Z}(K)^*$ in $K^*$.
 We can show $K$ is extraspecial.  See Aschbacher p 109 for the rest of the argument.
 \end{quote}
 {\bf Theorem 11:}
