--- a/groups/gtPermutations.tex
+++ b/groups/gtPermutations.tex
@@ -194,8 +194,8 @@ $|{x^{-1}(x\phi): x \in G}| = |G|-1$ and (1) holds. Since $\exists y: x= y^{-1}(
 $x(x \phi) (x \phi^2) \ldots (x \phi^{n-1}) =
 y^{-1}(y \phi) (y \phi^2) \ldots (y \phi^{n-1})^{n-1}) = y^{-1}y = 1$.
 \end{quote}
-{\bf Lemma 2:} Let $\phi$ be a fixed point free automorphism acting on $G$ then $\phi$ leaves a unique
-$S_p$subgroup of $G$ invariant.
+{\bf Lemma 2:} Let $\phi$ be a fixed point free automorphism acting on $G$ then $\phi$
+leaves a unique $S_p$subgroup of $G$ invariant.
 \begin{quote}
 \emph{Proof:}  
 Let $Q \in S_p(G), (Q)\phi = y^{-1}Qy$.  $y^{-1}= (z\phi)z^{-1}$ and $y = z(z^{-1}]phi)$.
@@ -226,7 +226,8 @@ $x, y \in G$, $y^{-1}x^{-1} = (xy)^{-1}= ((x\phi)(y\phi))^{-1} = x^{-1} y^{-1}$,
 nilpotent and $[x, x\phi]=1, \forall x \in G$.
 \begin{quote}
 \emph{Proof:}  
-$x(x\phi)(x\phi^2)=1$, so $x(x\phi)= (x\phi^2)^{-1}$ and $x$ commutes with $x\phi$ for any $x \in G$.
+$x(x\phi)(x\phi^2)=1$, so $x(x\phi)= (x\phi^2)^{-1}$ and $x$ commutes
+with $x\phi$ for any $x \in G$.
 Let $P$ be the unique $\phi$-invariant $S_p$ subgroup of $G, \forall p \in \pi(G)$.  We show
 $P \lhd G$.
 Suppose not and
