--- a/groups/gtSignal.tex
+++ b/groups/gtSignal.tex
@@ -391,7 +391,12 @@ $\theta_{q'}$ is complete for all $q \in \pi(\theta)$.
 Let $G$ be a $p'$-group and $X$ and $Y$ be two $A$-invariant subgroups if $G$.  Suppose further,
 (1) $C_G(a)= C_X(a)C_Y(a)$ for all $a \in A^{\#}$ and (2) $X$ is $C_G(A)$-invariant then $G=XY$.
 \begin{quote}
-\emph{Proof:} See Stellbacher, p 312.
+\emph{Proof:}
+By induction.  Let $q$ be a prime divisor of $|G|$ and $G$ has a non-trivial $q$ subgroup.
+$\mathbb{Z}(G) \ne 1$ and since $A$ is non-cyclic, $\exists a \in A: N=C_{\mathbb{Z}(G)}(a) \ne 1$.
+$N$ is $A$-invariant.  Put $\overline(G) = G/N$.  By induction,
+$G=XYN=XNY=X C_G(a)Y=XY$.
+See Stellmacher, p 312 for the rest.
 \end{quote}
 \section{More from Thompson}
 {\bf Thompson Transitivity Theorem:}  If $G$ is a group in which
