--- a/groups/gtTransfer.tex
+++ b/groups/gtTransfer.tex
@@ -182,16 +182,17 @@ We know $c_2 \in C_G(P)$, so $P, P^g \in C_G(c_2)$ and since they are both
 Sylow subgroups of $C_G(c_2)$ by Sylow, $\exists h \in C_G(c_2): P^{gh}=P$ and
 hence $gh \in N_G(P)$.  $c_1^{gh}= c_2^h= c_2$ and so $c_1$ and $c_2$ fuse in $N_G(P)$.
 \end{quote}
-{\bf Theorem 11:}  Let  $P$ be a Hall subgroup of $G$ then $Foc_G(P) = P \cap G(\pi)=P \cap G'$ and
+{\bf Theorem 11:}  Let  $P$ be a Hall subgroup of $G$ then $Foc_G(P) = P \cap G'(\pi)=P \cap G'$ and
 $G/Foc_G(P) \cong G/G'(\pi)$, $ker(V_{G \rightarrow P}) = G'(\pi)$ and
 $P/P' = {\overline P} = {\overline {Foc_G(P)}} \times Im(V_{G \rightarrow P})$.
 \begin{quote}
-\emph{Proof:}  $(|P|,|G:P|) = 1$.  $V_{G \rightarrow P} {\overline {Foc_G(P)}} = \langle {\overline x} \rangle {\overline {Foc_G(P)}}$ as in the
-proof of the FST.  Conversely, $G(\pi) \subseteq ker(V_{G \rightarrow P})$ and ${\overline P}$ is abelian so
-$Foc_G(P) \leq P \cap G' = P \cap G(\pi) \leq P \cap ker(V_{G \rightarrow P})$.  As before, equality holds 
-$|G/G(\pi)| \geq |G/ker(V_{G \rightarrow P})| = |Im(V_{G\rightarrow P})|$.
-Finally, $P/(P \cap G') \cong G/G(\pi)$,
-so $ker(V_{G \rightarrow P}) = G(\pi)$ and $Im(V_{G \rightarrow P}) \cong P/Foc_G(P)$.
+\emph{Proof:}  $(|P|,|G:P|) = 1$.
+$V_{G \rightarrow P} ({\overline {Foc_G(P)}}) = \langle {\overline x} \rangle {\overline {Foc_G(P)}}$ as in the
+proof of the FST.  Conversely, $G'(\pi) \subseteq ker(V_{G \rightarrow P})$ and ${\overline P}$ is abelian so
+$Foc_G(P) \leq P \cap G' = P \cap G'(\pi) \leq P \cap ker(V_{G \rightarrow P})$.  As before, equality holds 
+$|G/G'(\pi)| \geq |G/ker(V_{G \rightarrow P})| = |Im(V_{G\rightarrow P})|$.
+Finally, $P/(P \cap G') \cong G/G'(\pi)$,
+so $ker(V_{G \rightarrow P}) = G'(\pi)$ and $Im(V_{G \rightarrow P}) \cong P/Foc_G(P)$.
 ${\overline P} = {\overline {Foc_G(P)}} \times Im(V_{G \rightarrow P})$.
 \end{quote}
 {\bf Corollary:} If $P$ is a Hall $\pi$
